--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-08-02 14:52:02
+lastsearch = 2024-08-02 18:24:41
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -370,4 +370,14 @@ url = https://www.fragrantica.com/designers/Amouage.html
 match = 0.0%%
 title = 
 url = https://www.chicago-theater.com/theaters/briar-street-theater/blue-man-group.php
+
+[intelligence.coffee]
+match = 0.0%%
+title = 
+url = https://intelligence.coffee/2023/04/nestle-blue-bottle-coffee-instant/
+
+[www.redfish-bluefish.com]
+match = -7.1%%
+title = Red Fish Blue Fish
+url = https://www.redfish-bluefish.com/
 
