--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-08-02 14:59:17
+lastsearch = 2024-08-02 18:20:57
 
 [www.instagram.com]
-match = -123.1%%
-title = meow_kikiki - Yuki Chan - Instagram
-url = https://www.instagram.com/meow_kikiki/
+match = -23.1%%
+title = Hoi Chan (@hoichandraws)
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.linkedin.com]
 match = -192.3%%
@@ -22,9 +22,9 @@ title = Hoi Chan draws on scientific illustrations to create 'muted ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
 
 [www.facebook.com]
-match = 33.3%%
-title = Yuk Hoi Chan
-url = https://www.facebook.com/hoihihoi/
+match = 7.7%%
+title = Yuki-Chan Cosplay
+url = https://www.facebook.com/YukiChansp/
 
 [happypaca.tumblr.com]
 match = -276.9%%
@@ -62,9 +62,9 @@ title = Centre for Learning Enhancement And Research :: About
 url = https://www.cuhk.edu.hk/clear/about/people.html
 
 [en.wikipedia.org]
-match = -333.3%%
-title = 3X1
-url = https://en.wikipedia.org/wiki/3X1
+match = -61.5%%
+title = Ichigeki Sacchu!! HoiHoi-san
+url = https://en.wikipedia.org/wiki/Ichigeki_Sacchu!!_HoiHoi-san
 
 [nursing.hku.hk]
 match = -161.5%%
