--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-02 06:59:07
+lastsearch = 2024-08-02 18:22:59
 
 [shopee.vn]
-match = -36.8%%
-title = Chiếu trúc, chiếu tre HT nan nhỏ siêu mát
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-HT-nan-nhỏ-siêu-mát-i.141565512.24776596764
+match = -126.3%%
+title = Chiếu trúc chiếu tre cho trẻ em, chieu truc hat nằm đẹp ...
+url = https://shopee.vn/Chiếu-trúc-chiếu-tre-cho-trẻ-em-chieu-truc-hat-nằm-đẹp-mát-an-toàn-i.49212472.796826351
 
 [chieutrelanlan.com]
 match = -105.3%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -131.6%%
-title = MƯA HÈ ♫ Tú Anh - Nhạc Thiếu Nhi Mùa Hè Vui Nhộn Cho ...
-url = https://www.youtube.com/watch?v=ZbNN7ZZ1YOk
+match = -147.4%%
+title = Ò Ó O o Dậy Đi Thôi Mau Dậy Bạn Ơi - Bài Hát Bé Nghe Mỗi ...
+url = https://www.youtube.com/watch?v=_bALkbOOQfY
 
 [dochoihoangthu.com]
 match = -121.1%%
