--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-08-02 17:13:38
+lastsearch = 2024-08-02 18:22:19
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -29,7 +29,7 @@ url = https://shopee.vn/Chiếu-trúc-Hạt-Quế-lâm-chuẩn-việt-nam-1m5-đ
 [demxanh.com]
 match = -25.0%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOorN1DJPIWp01PGbXsYA0_nms53HSPRFaJrb4lWE2JR4zRWy8Gcj
 
 [tiki.vn]
 match = -39.3%%
