--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-02 16:31:16
+lastsearch = 2024-08-02 18:15:03
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -37,9 +37,9 @@ title = 3:16 Healthcare | Bremen GA
 url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
-match = -146.2%%
-title = The Gummy Bear Song - Long English Version
-url = https://www.youtube.com/watch?v=astISOttCQ0
+match = -9.1%%
+title = Dynamic KML
+url = https://www.youtube.com/watch?v=QzS_shIzfcM
 
 [www.regmovies.com]
 match = -215.4%%
@@ -272,9 +272,9 @@ title = The Little Bus Tayo Special Wind-Up Set : Toys & Games
 url = https://www.amazon.com/Tayo-Little-Bus-Play-Set/dp/B0084TMPQ6
 
 [www.imdb.com]
-match = -92.3%%
-title = Ginny & Georgia (TV Series 2021
-url = https://www.imdb.com/title/tt10813940/
+match = -223.1%%
+title = Ore no imouto ga konna ni kawaii wake ga nai (2010)
+url = https://www.imdb.com/title/tt1751305/
 
 [ottawabraves.com]
 match = -292.3%%
@@ -477,9 +477,9 @@ title = Georgia Rest Areas: Roadside GA Rest Stops | Maps | Facility
 url = https://www.georgiarestareas.com/
 
 [www.sciencedirect.com]
-match = -215.4%%
-title = Acta Materialia | ScienceDirect.com by Elsevier
-url = https://www.sciencedirect.com/journal/acta-materialia/articles-in-press
+match = -300.0%%
+title = Highly mobile twin boundaries in seven-layer modulated Ni ...
+url = https://www.sciencedirect.com/science/article/pii/S1359646219306359
 
 [www.cvlga.org]
 match = -138.5%%
@@ -675,4 +675,9 @@ url = https://cenmed.com/spare-parts-u31-i5160/
 match = -46.2%%
 title = GUARDIANSHIP LAW IN GEORGIA
 url = https://aging.georgia.gov/document/publication/elap-guardianship-2012pdf/download
+
+[www.swagelok.com]
+match = -253.8%%
+title = Gaugeable Tube Fittings and Adapter Fittings (MS-01-140
+url = https://www.swagelok.com/downloads/webcatalogs/en/ms-01-140.pdf
 
