CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -52,9 +52,9 @@ title = Vietnamese language
 url = https://en.wikipedia.org/wiki/Vietnamese_language
 
 [books.google.com]
-match = -139.1%%
-title = Vietnam Travel Map Eighth Edition - Page 11 - Google Books Result
-url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA11&lpg=PA11&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz2Sjg8Vy&sig=ACfU3U1rnJ7fnD37fMCUv5wdePN7T-7Qbg&hl=en&sa=X&ved=2ahUKEwih7Ju93tKHAxWQmYkEHXLMI00Q6AF6BAgmEAM
+match = -43.5%%
+title = Vietnam - Page 187 - Google Books Result
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrXhdV2G&sig=ACfU3U2Qbpg6KuHacGywh549LvgpDtFPrQ&hl=en&sa=X&ved=2ahUKEwiPmPzAmdaHAxU7v4kEHQ-0Cn0Q6AF6BAgjEAM
 
 [www.travelweekly.com]
 match = -87.0%%
