--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-02 11:26:52
+lastsearch = 2024-08-02 18:26:52
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgnOFtj8&sig=ACfU3U3c7_sct94Zx1FG01pvygICjMo4gw&hl=en&sa=X&ved=2ahUKEwjN3vHku9WHAxWNLkQIHWT1A-QQ6AF6BAgXEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgnQLlj7&sig=ACfU3U2Y81F2qeKdJMimdtr9esdGWJxQUw&hl=en&sa=X&ved=2ahUKEwi574XVmdaHAxXImLAFHaQvBsUQ6AF6BAgZEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
