--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-02 17:13:59
+lastsearch = 2024-08-02 18:32:03
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -42,9 +42,9 @@ title = Bộ chăn ga gối Sông Hồng HOME COLLECTION H16 036 ...
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16036-ga-phu.html
 
 [cuahangchangagoidem.com]
-match = -45.8%%
-title = Chăn Ga Gối Đệm Cao Cấp Giá Tốt Freeship Tích Điểm
-url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
+match = -25.0%%
+title = 13 Bộ Chăn Ga Gối Đệm Cưới Màu Đỏ Đẹp, Ý Nghĩa 2023
+url = https://cuahangchangagoidem.com/chan-ga-goi-dem-cuoi-mau-do/
 
 [tiki.vn]
 match = 0.0%%
