--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-02 16:43:42
+lastsearch = 2024-08-02 18:40:38
 
 [www.facebook.com]
 match = -141.2%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -152.9%%
-title = Wen Dan Tang: A Potential Jing Fang Decoction for ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8955743/
+match = -147.1%%
+title = Polymorphism of the COMT, MAO, DAT, NET and 5-HTT ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3924247/
 
 [books.google.com]
 match = -7.7%%
