--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-08-02 15:21:58
+lastsearch = 2024-08-02 18:38:51
 
 [tiki.vn]
 match = 16.0%%
@@ -12,9 +12,9 @@ title = Mua Chiếu trúc Đài Loan mặt trúc mặt lụa
 url = https://tiki.vn/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-p10764702.html?spid=58961412
 
 [www.tiktok.com]
-match = 4.0%%
-title = Phim Mai Có Chiếu Ở Taiwan Không
-url = https://www.tiktok.com/discover/phim-mai-có-chiếu-ở-taiwan-không?lang=en
+match = -80.0%%
+title = Phim MAI của Trấn Thành sẽ được khởi chiếu tại Đài Loan ...
+url = https://www.tiktok.com/@danghoaly86/video/7348795087473609989
 
 [shopee.vn]
 match = -28.0%%
@@ -54,7 +54,7 @@ url = https://www.skyscanner.com.vn/routes/tpe/sgn/taipei-taiwan-taoyuan-to-than
 [www.bestprice.vn]
 match = -80.0%%
 title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất hôm nay
-url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
+url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan?srsltid=AfmBOooCfTnF_jptgr4uL8hkwAQcH7hBpe9FMTw9k1-woPlfouNEp-hd
 
 [www.traveloka.com]
 match = -96.0%%
