--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-08-02 11:29:37
+lastsearch = 2024-08-02 18:35:52
 
 [zhangbrickshop.com]
 match = -133.3
@@ -182,9 +182,9 @@ title = 2'-deoxyuridine D2
 url = https://www.aptochem.com/p-101-2-deoxyuridine-d2.aspx
 
 [shopee.vn]
-match = -186.7%%
-title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
-url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
+match = -206.7%%
+title = Trống Cajon AB-D2 có tay vặn chỉnh kèm EQ kết nối loa
+url = https://shopee.vn/Trống-Cajon-AB-D2-có-tay-vặn-chỉnh-kèm-EQ-kết-nối-loa-Tặng-bao-và-dây-jack-3m-i.37429989.9030570402
 
 [uspharma.vn]
 match = -20.0%%
