--- a/images/chieu-nhua-ha-noi-160x200/config.ini
+++ b/images/chieu-nhua-ha-noi-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 lastopen = 2024-08-01 09:09:09
 
 [search]
-lastsearch = 2024-08-02 16:40:52
+lastsearch = 2024-08-02 18:27:36
 
 [demre.com.vn]
-match = 61.1%%
-title = Chiếu nhựa 160x200
-url = https://demre.com.vn/chieu-nhua-160x200
+match = 76.0%%
+title = Chiếu nhựa cao cấp 180x200
+url = https://demre.com.vn/chieu-nhua-cao-cap-180x200
 
 [www.facebook.com]
 match = 42.1%%
@@ -37,9 +37,9 @@ title = Chiếu nhựa Hà Nội du lịch 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html
 
 [demxanh.com]
-match = -20.0%%
-title = Chiếu Trúc hạt Hương Trúc hạt vàng - Hà Nội
-url = https://demxanh.com/chieu-truc-hat-huong-truc.html
+match = -28.0%%
+title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
+url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
 
 [shopee.vn]
 match = 36.0%%
