--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-07 00:19:30
 lastsearch = 2024-08-02 18:22:19
 
 [thegioidemviet.vn]
-match = 35.7%%
-title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
-url = https://thegioidemviet.vn/chieu-truc-que-lam/
+match = 21.4%%
+title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
+url = https://thegioidemviet.vn/chieu-truc/
 
 [chieutrelanlan.com]
 match = 25.0%%
