--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-08-02 17:46:27
+lastsearch = 2024-08-02 18:25:49
 
 [shopee.vn]
-match = -75.0%%
-title = Thảm nỉ lau chân hình chữ nhật, chùi chân len mềm mịn ...
-url = https://shopee.vn/Thảm-nỉ-lau-chân-hình-chữ-nhật-chùi-chân-len-mềm-mịn-dày-dặn-chống-trơn-trượt-hàng-chất-lượng-cao-i.1124996528.22086948160
+match = -8.3%%
+title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
+url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
 
 [lepetit.com.vn]
 match = -66.7%%
-title = Thảm lau chân lông xù màu trơn thấm nước, chống trượt ...
-url = https://lepetit.com.vn/tham-long-xu-chu-nhat-ma-u-tron-tham-nuoc-chong-truot-40x60-cm
+title = Thảm lau chân lông xù hình học thấm nước, chống trượt ...
+url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
 
 [tiki.vn]
 match = -54.2%%
@@ -49,7 +49,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 [www.lazada.vn]
 match = -83.3%%
 title = Thảm lau chùi chân chống trơn trượt sợi len siêu mịn kích ...
-url = https://www.lazada.vn/products/tham-lau-chui-chan-chong-tron-truot-soi-len-sieu-min-kich-thuoc-40x60cm-tham-lau-chan-tham-hut-tot-tham-lau-chui-chan-i1603764008.html?srsltid=AfmBOoo-rezMFU0s2cpgktQZXNxIkTEVmk6Fc1uN0xyNGifwFSbnwpLT
+url = https://www.lazada.vn/products/tham-lau-chui-chan-chong-tron-truot-soi-len-sieu-min-kich-thuoc-40x60cm-tham-lau-chan-tham-hut-tot-tham-lau-chui-chan-i1603764008.html
 
 [megahomevietnam.com]
 match = 20.0%%
