--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -251,3 +251,8 @@ match = 25.0%%
 title = GIƯỜNG GẤP VIỆT NHẬT
 url = https://giuonggapvietnhat.vn/
 
+[spacet.vn]
+match = -85.0%%
+title = Bộ Thảm Bếp, Thảm Để Chân Giường, Thảm Lau Chân ...
+url = https://spacet.vn/shop/bo-tham-bep-tham-de-chan-giuong-tham-lau-chan-long-cuu-cao-cap-nhap-khau-50x120-12378
+
