--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-08-02 16:33:39
+lastsearch = 2024-08-02 18:37:33
 
 [www.tiktok.com]
-match = -187.5%%
-title = Hard to narrow down my must-have shades from @NARS ...
-url = https://www.tiktok.com/@marjmaroket/video/7175479983727545626
+match = -193.8%%
+title = Wendy Dodo Sugar Box opening . . . #wendydodosugar ...
+url = https://www.tiktok.com/@unboxing_serotonin/video/7252768147143462186
 
 [digitalmaine.com]
 match = -75.0%%
@@ -34,7 +34,7 @@ url = https://m.facebook.com/p/Nhu-shop-100036848391375/?locale=is_IS
 [www.diepxuan.com]
 match = 18.8%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOopkuCFdOjbSfnJKyHhJH1-rgDbt68xnZXDHAzU1PdXcFo15iwIV
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [diepxuan.com]
 match = 6.2%%
