CI images update

--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-08-02 17:19:11
+lastsearch = 2024-08-02 18:52:22
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -24,7 +24,7 @@ url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
 [demxanh.com]
 match = -87.0%%
 title = Tư vấn mua chiếu trúc thanh chính hãng, giá rẻ tại Đệm Xanh
-url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html?srsltid=AfmBOopA3vtZVT6SUJY_5gyM2qnMCYwZdr5NDOiGU5UAEUP3LLzkx9mo
+url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html
 
 [www.dienmayxanh.com]
 match = -73.9%%
@@ -337,9 +337,9 @@ title = Một số điểm sáng tình hình kinh tế – xã hội quý II và
 url = https://www.gso.gov.vn/du-lieu-va-so-lieu-thong-ke/2024/07/mot-so-diem-sang-tinh-hinh-kinh-te-xa-hoi-quy-ii-va-6-thang-dau-nam-2024/
 
 [vnexpress.net]
-match = -26.1%%
-title = Cuộc đấu trí 75 ngày ở hội nghị Geneve
-url = https://vnexpress.net/cuoc-dau-tri-75-ngay-o-hoi-nghi-geneve-4771579.html
+match = -82.6%%
+title = Cỗ máy phân loại giới tính 16 triệu nhộng muỗi mỗi tuần
+url = https://vnexpress.net/co-may-phan-loai-gioi-tinh-16-trieu-nhong-muoi-moi-tuan-4776839.html
 
 [danang.gov.vn]
 match = -117.4%%
