--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-02 16:35:22
+lastsearch = 2024-08-02 18:55:49
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -127.8%%
-title = Khay cuốn nem siêu tốc | KHAY CUỐN SIÊU TỐC | CUỐN ...
-url = https://www.facebook.com/ngoinhachichbong/videos/khay-cuốn-nem-siêu-tốc/1791938007504711/
+match = -77.8%%
+title = NEM Fashion - NEM Fashion added a new photo.
+url = https://www.facebook.com/photo.php?fbid=790551389774227&id=100064581196454&set=a.651941746968526
 
 [thegioinem.com]
 match = -55.6%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -133.3%%
-title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
+match = -111.1%%
+title = Người Việt Bolsa/Orange County | NEM CHUA CHẢ HUẾ
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/nem-chua-chả-huế-2520-cái-chả-huế-mini-65-50-cái-sử-dụng-thịt-heo-tươi-chất-lượn/2894022880748076/
 
 [emartmall.com.vn]
 match = 0.0%%
