--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-02 17:50:53
+lastsearch = 2024-08-02 18:48:55
 
 [hanvico.com.vn]
 match = 28.6%%
-title = Bộ ga chun LIVING - LV52
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv52/
+title = Bộ ga chun LIVING - LV55
+url = https://hanvico.com.vn/san-pham/lv55/
 
 [www.diepxuan.com]
 match = -4.8%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối TTN 14 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
-match = -28.6%%
-title = Bộ chăn ga gối cotton 100%% mã màu BC22-063
-url = https://changagoidemsonghong.com/chan-ga-goi-bc63
+match = -95.2%%
+title = Bộ chăn ga gối Sông Hồng chính hãng 100%% cotton mã BC21 ...
+url = https://changagoidemsonghong.com/chan-ga-goi-bc29
 
 [songhong.info]
 match = -19.0%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối Everon Lite EVE14
 url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga chun chần mặt Elegant H140 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140
+match = -33.3%%
+title = Bộ ga chun Velina V14 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-velina-v14
 
 [changmibedding.com]
 match = -33.3%%
