--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-02 04:43:42
+lastsearch = 2024-08-02 18:48:11
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,14 +12,14 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -64.7%%
-title = How I gutted my HOA : r/pettyrevenge
-url = https://www.reddit.com/r/pettyrevenge/comments/10fgrkx/how_i_gutted_my_hoa/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -164.7%%
-title = How can the HOA kick you out of your house when you ...
-url = https://www.quora.com/How-can-the-HOA-kick-you-out-of-your-house-when-you-own-it
+match = -200.0%%
+title = If I buy a house, can an HOA really tell me that my friend ...
+url = https://www.quora.com/If-I-buy-a-house-can-an-HOA-really-tell-me-that-my-friend-can-t-live-with-me-because-we-re-not-blood-related
 
 [lauragoodsonart.com]
 match = 47.1%%
