--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-02 17:20:10
+lastsearch = 2024-08-02 18:54:48
 
 [www.diepxuan.com]
 match = -131.2%%
 title = Túi Warmdream 180x200x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-180x200x09.html?srsltid=AfmBOoomJ0bA3mRDmd4s3n9lDc9rkg0ZmpdRxHJngLh-SFDqhQhai_IQ
+url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 
 [demxanh.com]
 match = -181.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -231.2%%
-title = Replying to @chixangel0411 Flortte Lip Gloss Serum Super ...
-url = https://www.tiktok.com/@kizha.nicolee/video/7236660335929871621
+match = -6.2%%
+title = Huda Beauty Lip Stain
+url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
 
 [archiveofourown.org]
 match = -137.5%%
