CI images update

--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-08-02 12:43:57
+lastsearch = 2024-08-02 20:09:08
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -38,8 +38,8 @@ url = https://www.koala.vn/bo-chan-ga-goi-solid-sa-18.html
 
 [shopee.vn]
 match = -34.6%%
-title = Bộ Chăn Ga Gối Cotton 3F Cao Cấp SIêu Nhiều Mẫu Mềm ...
-url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-3F-Cao-Cấp-SIêu-Nhiều-Mẫu-Mềm-Mịn-Chuyên-Dùng-Cho-Khách-Sạn-Bộ-Chăn-Ga-Gối-Khách-Sạn-i.5009645.18890523206
+title = Bộ Chăn Ga Gối Cotton Poly Hạc Hồng Chăn Chần Bông ...
+url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Poly-Hạc-Hồng-Chăn-Chần-Bông-Dày-Dặn-i.214539081.4247239060
 
 [bedding.vn]
 match = -42.3%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối cao cấp mã UC22-018
 url = https://songhong.info/chan-ga-goi-uc018
 
 [thegioichanra.com]
-match = 38.5%%
-title = Bộ Chăn Ga Gối Tencel Edena Love 22
-url = https://thegioichanra.com/san-pham/bo-chan-ga-goi-tencel-edena-love-22/
+match = 30.8%%
+title = Bộ Chăn Ga Gối Tencel Edena Love L742
+url = https://thegioichanra.com/san-pham/bo-chan-ga-goi-tencel-edena-love-l742/
 
 [demxanh.com]
 match = -3.8%%
