--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-02 17:34:38
+lastsearch = 2024-08-02 19:56:58
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -12,9 +12,9 @@ title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [songhongonline.vn]
-match = 0.0%%
-title = Bộ sản phẩm SH_BC22 066
-url = https://songhongonline.vn/products/bo-san-pham-song-hong-sh-bc22-1
+match = 24.2%%
+title = Bộ chăn ga gối trẻ em SH_JC22 002
+url = https://songhongonline.vn/products/bo-chan-ga-goi-tre-em-sh-yc22-002
 
 [everon.online]
 match = 50.0%%
