--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-02 18:32:25
+lastsearch = 2024-08-02 19:57:40
 
 [agasound.vn]
 match = 6.7%%
@@ -54,7 +54,7 @@ url = https://www.lineabon.vn/product-page/lineabon-d3k2
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 12
-url = https://www.diepxuan.com/chieu-lac-d2-12.html
+url = https://www.diepxuan.com/chieu-lac-d2-12.html?srsltid=AfmBOop-CO1-4kps7m9eZOODKyfvrd8vHEOO6efRQy9weSPLAxqnrr0o
 
 [shopee.vn]
 match = -186.7%%
@@ -102,9 +102,9 @@ title = Korea Visa Application Center in Ha Noi
 url = https://visaforkorea-vt.com/
 
 [www.slideshare.net]
-match = -226.7%%
-title = 50 đề thi học sinh giỏi vật lý 12 có đáp án chi tiết | PDF
-url = https://www.slideshare.net/slideshow/50-thi-hc-sinh-gii-vt-l-12-c-p-n-chi-tit/239568317
+match = -100.0%%
+title = Tổng Hợp Công Thức Vật Lí Lớp 12 | PDF
+url = https://www.slideshare.net/phunghuynh931102/tong-hopcongthucvatlylop1213900
 
 [diendan.hocmai.vn]
 match = -113.3%%
@@ -127,9 +127,9 @@ title = Korea Visa Application Center in Ha Noi
 url = https://www.visaforkorea-vt.com/
 
 [shopvnb.com]
-match = -173.3%%
-title = Top 8 sân cầu lông Gò Vấp chất lượng năm 2024 ...
-url = https://shopvnb.com/danh-sach-cac-san-cau-long-go-vap-nam-2020-cac-long-thu-da-biet-chua-.html
+match = -166.7%%
+title = Danh Sách Các Sân Cầu Lông Ở Bình Thạnh Mới Nhất
+url = https://shopvnb.com/danh-sach-cac-san-cau-long-o-binh-thanh-moi-nhat.html
 
 [batdongsan.com.vn]
 match = -193.3%%
