--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-02 18:18:54
+lastsearch = 2024-08-02 20:07:25
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -302,9 +302,9 @@ title = Vụ điểm thi 'bất thường' vào lớp 10 Thái Bình: Tạm đì
 url = https://suckhoedoisong.vn/vu-bat-thuong-diem-thi-vao-lop-10-thai-binh-tam-dinh-chi-giam-doc-so-gddt-169240801113717864.htm
 
 [tuoitrenews.vn]
-match = -82.6%%
-title = 100 students join military course in southern Vietnam
-url = https://tuoitrenews.vn/news/education/20240711/100-students-join-military-course-in-southern-vietnam/80893.html
+match = -113.0%%
+title = Vietnam, Hong Kong vow to boost multifaceted ties, sign 8 ...
+url = https://tuoitrenews.vn/news/politics/20240802/vietnam-hong-kong-vow-to-boost-multifaceted-ties-sign-8-cooperative-deals/81253.html
 
 [www.crazyguyonabike.com]
 match = -82.6%%
