--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-08-02 14:47:54
+lastsearch = 2024-08-02 20:03:55
 
 [eva.vn]
 match = -163.2%%
@@ -87,9 +87,9 @@ title = Cây lá bỏng thần kỳ "mọc" ra hoa hồng xanh mướt
 url = https://kenh14.vn/cay-la-bong-than-ky-moc-ra-hoa-hong-xanh-muot-20170424194942725.chn
 
 [saigonhoa.com]
-match = -68.4%%
-title = Mẹo để cây mai chiếu thủy nở rộ vào dịp Tết
-url = https://saigonhoa.com/meo-de-cay-mai-chieu-thuy-no-ro-vao-dip-tet/
+match = -89.5%%
+title = 17 cây bóng mát khuyến khích trồng đường phố
+url = https://saigonhoa.com/17-cay-bong-mat-khuyen-khich-trong-duong-pho/
 
 [nongthonviet.com.vn]
 match = -94.7%%
@@ -340,4 +340,9 @@ url = https://apollosilicone.vn/tin-tuc/keo-silicon-chiu-nhiet-do-cao-bao-nhieu-
 match = -94.7%%
 title = Bông Spa - Không nhận tiền TIP - Hồ Chí Minh
 url = https://bongspa.com/
+
+[tintuconline.com.vn]
+match = -115.8%%
+title = Hoa nở là điềm lành nhưng 4 cây này bỗng dưng ra ...
+url = https://tintuconline.com.vn/nha-dep/hoa-no-la-diem-lanh-nhung-4-cay-nay-bong-dung-ra-hoa-lai-la-diem-go-n-545218.html
 
