--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-08-02 13:29:47
+lastsearch = 2024-08-02 20:08:47
 
 [m.youtube.com]
 match = -144.4%%
@@ -27,9 +27,9 @@ title = NEM Fashion - 𝐀́𝐎 𝐏𝐇𝐀𝐎
 url = https://www.facebook.com/story.php/?story_fbid=745952497567450&id=100064581196454
 
 [www.tiktok.com]
-match = -166.7%%
-title = Chắc nhiều bạn đã nghe đến Nem Chua chị Hạnh. Phải nói ...
-url = https://www.tiktok.com/@ngdangdung/video/7237496309215726853
+match = -16.7%%
+title = Nem Nuong Que Huong Air Fryer
+url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
 
 [www.youtube.com]
 match = -144.4%%
@@ -72,8 +72,8 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -200.0%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai ...
+match = -177.8%%
+title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
 url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [www.proz.com]
