--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-08-02 04:26:38
+lastsearch = 2024-08-02 19:59:44
 
 [www.everonvn.vn]
-match = 34.5%%
-title = Ruột gối thư giãn cổ Micro Relax
-url = https://www.everonvn.vn/chi-tiet/ruot-goi-thu-gian-co-micro-relax.html
+match = 68.0%%
+title = Ruột gối Everon Lite thấp
+url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-lite.html
 
 [happynest.vn]
 match = 3.4%%
@@ -17,9 +17,9 @@ title = Ruột gối truyền thống Everon 45x65 (Classic - Loại thấp)
 url = https://happynest.vn/shop/ERG4565T/ruot-goi-truyen-thong-everon-45x65-(classic---loai-thap).html
 
 [everonhanquoc.vn]
-match = -24.1%%
-title = Ruột Gối MicreLax Everon: Giải Pháp Hoàn Hảo Cho Giấc ...
-url = https://everonhanquoc.vn/everon/12711/ruot-goi-micrelax
+match = 17.2%%
+title = Bảng giá ruột gối mỏng Everon
+url = https://everonhanquoc.vn/everon/1508/ruot-goi-mong-everon
 
 [everonchinhhang.vn]
 match = 48.1%%
