--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-02 17:45:44
+lastsearch = 2024-08-02 20:01:29
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -59.3%%
-title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
-url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron
+match = -33.3%%
+title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
+url = https://jysk.vn/vo-goi-trang-tri
 
 [elambo.vn]
 match = -3.7%%
@@ -42,9 +42,9 @@ title = vỏ gối kê cổ giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/
 
 [demxanh.com]
-match = -11.1%%
-title = [HOT] Top 9 gối nằm mát tốt nhất cho ngày hè
-url = https://demxanh.com/goi-nam-mat-tot-nhat.html
+match = -44.4%%
+title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
+url = https://demxanh.com/chan-ga-goi-olympia.html
 
 [www.thegioididong.com]
 match = -55.6%%
@@ -147,14 +147,14 @@ title = Người góp phần làm khởi sắc bản biên giới Mùa Xuân
 url = https://www.bienphong.com.vn/nguoi-gop-phan-lam-khoi-sac-ban-bien-gioi-mua-xuan-post477378.html
 
 [m.facebook.com]
-match = -55.6%%
-title = Shopee | E hỏi thật hàng hoàn về các bác có cho người ...
-url = https://m.facebook.com/groups/shopeenguoiban.chiasekinhnghiem/posts/1761595157978278/
+match = -29.6%%
+title = Chia sẻ kinh nghiệm bán hàng nghìn đơn - Shopee
+url = https://m.facebook.com/groups/shopeenguoiban.chiasekinhnghiem/posts/1763832037754590/
 
 [vietbao.com]
-match = 3.7%%
-title = Một Chút Tâm Tình Với Pulau Bidong
-url = https://vietbao.com/a319408/mot-chut-tam-tinh-voi-pulau-bidong
+match = -22.2%%
+title = Người chạy xe ôm bến Ninh Kiều - Truyện / Ký
+url = https://vietbao.com/a319688/nguoi-chay-xe-om-ben-ninh-kieu
 
 [2sao.vn]
 match = -55.6%%
@@ -187,9 +187,9 @@ title = Bảng giá lẻ vỏ chăn ga gối trắng kẻ sọc cao cấp
 url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 
 [dienmaycholon.com]
-match = -44.4%%
-title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
-url = https://dienmaycholon.com/goi-vo-goi-simplehome
+match = -48.1%%
+title = Cách tìm lại nhật ký cuộc gọi đã xóa trên Android và ...
+url = https://dienmaycholon.com/kinh-nghiem-mua-sam/huong-dan-cach-tim-lai-nhat-ky-cuoc-goi-da-xoa-tren-android-va-iphone
 
 [metruyen.me]
 match = 33.3%%
@@ -227,9 +227,9 @@ title = Bộ drap giường vỏ gối và bộ chăn ga hàn quốc Tết
 url = http://www.changabluetoday.com/bai-viet/bo-drap-giuong-vo-goi-va-bo-chan-ga-han-quoc-tet/248/
 
 [khodem.vn]
-match = -14.8%%
-title = Bộ chăn ga gối lụa Pyeoda Silk Sky - Kho đệm
-url = https://khodem.vn/bo-chan-ga-goi-lua-pyeoda-silk-sky/
+match = -3.7%%
+title = Bộ chăn ga gối kẻ trắng khách sạn - Kho đệm
+url = https://khodem.vn/bo-chan-ga-goi-ke-trang-khach-san/
 
 [freedomforvietnam.wordpress.com]
 match = -29.6%%
