CI images update

--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-02 18:40:38
+lastsearch = 2024-08-02 20:30:10
 
 [www.facebook.com]
 match = -141.2%%
@@ -89,7 +89,7 @@ url = https://cannabis.ny.gov/system/files/documents/2023/10/hemp-retail-license
 [profiles.stanford.edu]
 match = -117.6%%
 title = Taia T. Wang, MD, PhD, MSCI - Stanford Profiles
-url = https://profiles.stanford.edu/taia-wang
+url = https://profiles.stanford.edu/taia-wang?tab=bio
 
 [english.simm.cas.cn]
 match = -27.3%%
@@ -254,7 +254,7 @@ url = https://profiles.umassmed.edu/display/129943
 [ehp.niehs.nih.gov]
 match = -182.4%%
 title = Urinary, Circulating, and Tissue Biomonitoring Studies ...
-url = https://ehp.niehs.nih.gov/0901716
+url = https://ehp.niehs.nih.gov/doi/full/10.1289/ehp.0901716
 
 [thesweetestdew.com]
 match = -29.4%%
