--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-08-02 18:38:51
+lastsearch = 2024-08-02 20:17:39
 
 [tiki.vn]
 match = 16.0%%
@@ -54,7 +54,7 @@ url = https://www.skyscanner.com.vn/routes/tpe/sgn/taipei-taiwan-taoyuan-to-than
 [www.bestprice.vn]
 match = -80.0%%
 title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất hôm nay
-url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan?srsltid=AfmBOooCfTnF_jptgr4uL8hkwAQcH7hBpe9FMTw9k1-woPlfouNEp-hd
+url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
 
 [www.traveloka.com]
 match = -96.0%%
