--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-02 18:48:55
+lastsearch = 2024-08-02 20:30:50
 
 [hanvico.com.vn]
 match = 28.6%%
-title = Bộ ga chun LIVING - LV55
-url = https://hanvico.com.vn/san-pham/lv55/
+title = Bộ ga chun LIVING - LV52
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv52/
 
 [www.diepxuan.com]
 match = -4.8%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối TTN 14 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
-match = -95.2%%
-title = Bộ chăn ga gối Sông Hồng chính hãng 100%% cotton mã BC21 ...
-url = https://changagoidemsonghong.com/chan-ga-goi-bc29
+match = -28.6%%
+title = Bộ chăn ga gối cotton 100%% mã màu BC22-063
+url = https://changagoidemsonghong.com/chan-ga-goi-bc63
 
 [songhong.info]
 match = -19.0%%
