--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-08-02 17:28:01
+lastsearch = 2024-08-02 20:28:45
 
 [shopee.vn]
 match = -25.9%%
@@ -54,7 +54,7 @@ url = https://www.youtube.com/watch?v=Y9mBdxK-DPg
 [www.diepxuan.com]
 match = 22.2%%
 title = Chăn tuyết Thái Lan 4kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-tuyet-thai-lan-4kg.html
+url = https://www.diepxuan.com/chan-tuyet-thai-lan-4kg.html?srsltid=AfmBOoqjCpPBzhA8ZZHeUZQHZXllmUlrUS5LSpErxqj2BeQjev-wDnmE
 
 [sanhangre.net]
 match = -33.3%%
@@ -124,7 +124,7 @@ url = https://stockbiz.vn/tin-tuc/shark-do-lien-nuoc-den-tan-cung-la-thac-do-ngu
 [www.facebook.com]
 match = -33.3%%
 title = Chăn 3kg 4 kg 5kg Thành... - Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/story.php/?story_fbid=436093618729320&id=100069860554625
+url = https://www.facebook.com/permalink.php/?story_fbid=436093618729320&id=100069860554625
 
 [tamanhhospital.vn]
 match = -66.7%%
