--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-02 20:09:29
+lastsearch = 2024-08-02 20:20:28
 
 [demxanh.com]
 match = 34.5%%
@@ -12,9 +12,9 @@ title = Chiếu điều hòa cao su non Tencel xanh nhạt
 url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [entershopping.vn]
-match = -13.8%%
-title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
+match = 3.4%%
+title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [thegioichieutruc.com]
 match = 51.7%%
