--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-08-02 16:44:36
+lastsearch = 2024-08-02 20:27:01
 
 [www.facebook.com]
 match = -45.0%%
@@ -14,12 +14,12 @@ url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-côn
 [demxanh.com]
 match = -85.0%%
 title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html?srsltid=AfmBOorPNTiwJgngB75dGoMA7eNoee0T6jqhEEVH-nhSmGfuzVwomhpV
 
 [www.khodemthanhdo.com]
-match = -8.3%%
-title = ĐỆM THÀNH ĐÔ
-url = https://www.khodemthanhdo.com/
+match = 5.0%%
+title = Bộ chăn ga gối pyeoda
+url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [pyeoda.vn]
 match = -95.0%%
@@ -34,7 +34,7 @@ url = https://tchome.vn/bo-chan-ga-goi-pyeoda-c3438.html
 [thegioidemonline.com]
 match = -90.0%%
 title = Bộ chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 18
-url = https://thegioidemonline.com/bo-chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html
+url = https://thegioidemonline.com/bo-chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html?srsltid=AfmBOoqk26fq8iqA5ZTlM4F6l7WFh2Ys-GtswM6DfAY4wNf7IeAzrdAw
 
 [shopee.vn]
 match = -30.0%%
@@ -64,7 +64,7 @@ url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-24.htm
 [vuanem.com]
 match = -15.0%%
 title = Chăn Ga Pyeoda Cao Cấp, Chính Hãng
-url = https://vuanem.com/brand/pyeoda
+url = https://vuanem.com/brand/pyeoda?srsltid=AfmBOor3JARPVz9jEqSHyUQqzieJ2cq9wHB_n1hkk8Ee3mS5go6FuJ-X
 
 [changagoidemphuongbac.com]
 match = -15.0%%
