--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-02 13:27:48
+lastsearch = 2024-08-02 20:20:08
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,14 +22,14 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -21.4%%
-title = 12.12: The Day
-url = https://en.wikipedia.org/wiki/12.12:_The_Day
+match = -45.5%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
-match = -70.0%%
-title = Trenton Catholic Boys High School Friends
-url = https://www.facebook.com/groups/1002178786517553/?locale=hu_HU
+match = -160.0%%
+title = CDT Jake Sorrels successfully defended his senior thesis “ ...
+url = https://www.facebook.com/photo.php?fbid=2759708960745737&id=130999010283425&set=a.135510956498897&locale=hu_HU
 
 [www.vietnam.vn]
 match = -155.0%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -205.0%%
-title = fruit riot sour fruit taste test! #fruitriotpineapple #fruitriotmangos ...
-url = https://www.tiktok.com/@bea_caroline/video/7340321717631470879?lang=en
+match = -200.0%%
+title = Trying Fruit Riot! @Fruit Riot ! Is it fruit? Is it candy? 4 flavors ...
+url = https://www.tiktok.com/@munchwithdes/video/7322261175981313311?lang=en
 
 [www.imdb.com]
 match = 0.0%%
