--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-08-02 17:47:47
+lastsearch = 2024-08-02 20:25:16
 
 [xoptraisan.info]
-match = -115.8%%
-title = Thảm xốp Tường Lâm - thương hiệu hàng Việt Nam chất ...
-url = https://xoptraisan.info/tham-xop-tuong-lam-cao-cap
+match = 26.3%%
+title = Thảm nỉ ghép Tường Lâm 60×60
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
 
 [thamaulac.com.vn]
 match = -31.6%%
@@ -37,9 +37,9 @@ title = Thảm xốp 60x60cm
 url = https://thamtretho.com/tham-xop-60x60cm
 
 [vatlieulotsan.com]
-match = -52.6%%
-title = Thảm Xốp 60 × 60 Cm Mặt Nỉ Hoa Văn Âu Lạc
-url = https://vatlieulotsan.com/product/tham-xop-60-x-60-cm-mat-ni-hoa-van-au-lac/
+match = -73.7%%
+title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
+url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
 
 [tiki.vn]
 match = -94.7%%
