CI images update

--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-02 18:17:09
+lastsearch = 2024-08-02 20:41:04
 
 [everonvn.com.vn]
 match = -11.1%%
 title = Bộ Everon Ep1831 - Curtis
-url = https://everonvn.com.vn/everon/630/bo-everon-ep1831?srsltid=AfmBOoplFva05tpAhX98pnXo2b75e4kgFB93AHwFo0_mm4TUnjaLjYNT
+url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
 match = -161.1%%
 title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1&srsltid=AfmBOorztF58KUasZb8d-OmUDG-xJusdkFqzl4tKXb7W8uTE7-XajNop
+url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
 
 [www.reddit.com]
 match = -150.0%%
@@ -32,9 +32,9 @@ title = Lịch sử giá 🥑 Vỏ gối đầu cotton poly 45x65 🥑 áo gối
 url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-nhieu-mau-sac-mau-bo-xam-duoc-chon-mau-p.1__19609304624__137416996
 
 [www.diepxuan.com]
-match = 5.6%%
-title = Vỏ gối kê xoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html?srsltid=AfmBOoojM7x_XGjszzPziXxWwem89FCHMhtiRkDgjgqFdwPINkARIvs4
+match = -11.1%%
+title = Vỏ gối EPM20065 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 
 [www.everonqb.com]
 match = -111.1%%
