--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-08-02 20:02:53
+lastsearch = 2024-08-02 20:36:13
 
 [demxanh.com]
 match = 28.0%%
@@ -47,9 +47,9 @@ title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html?srsltid=AfmBOopK4HibR3Zft_C9vHq8vvSI02baWCYOImN9BfKugCUdjvMuwLm1
 
 [www.facebook.com]
-match = 28.0%%
-title = Chăn Ga Gối Đệm Singapore
-url = https://www.facebook.com/changagoisingapore/?locale=uk_UA
+match = 20.7%%
+title = Chăn Ga Gối Đệm Singapore | Hanoi
+url = https://www.facebook.com/changagoisingapore/?locale=nn_NO
 
 [changagoidemdep.vn]
 match = 3.4%%
