--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-08-02 16:36:02
+lastsearch = 2024-08-02 20:30:59
 
 [demxanh.com]
 match = 38.2%%
 title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html?srsltid=AfmBOoqzTM8_MYK12xRBNGmUDYSnZuLA9iA1OB7StqIr12GhinNdqFRp
 
 [shopee.vn]
 match = 23.5%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/search?keyword=chiếu điều hòa cao su non 5d
 [foreverbedding.net]
 match = 32.4%%
 title = Chiếu Điều Hoà Cao Su Non Có Chống Thấm Không?
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong?srsltid=AfmBOooGSPbv--uSr6A8NHhRedDcoyDEEVp3krjShh_LqBjRoOueO4m3
 
 [demchinhhang.com]
 match = 53.1%%
@@ -99,7 +99,7 @@ url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
 [www.lazada.vn]
 match = -5.9%%
 title = Chiếu điều hòa cao su non, chiếu điều hòa kích thước lớn ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-chieu-dieu-hoa-kich-thuoc-lon-1m6x2m18x2m-chat-lieu-mem-mai-tao-cam-giac-mat-lanh-va-em-ai-khi-nam-mau-ma-bat-mat-giup-cho-can-phong-ban-tinh-te-va-sang-trong-i2232252220.html
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-chieu-dieu-hoa-kich-thuoc-lon-1m6x2m18x2m-chat-lieu-mem-mai-tao-cam-giac-mat-lanh-va-em-ai-khi-nam-mau-ma-bat-mat-giup-cho-can-phong-ban-tinh-te-va-sang-trong-i2232252220.html?srsltid=AfmBOoqPO947RkfxaheLHD22uJicvmUcyAmvuSYutL77i9iNplMRZD_E
 
 [ru9.vn]
 match = 8.8%%
