--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-02 18:48:11
+lastsearch = 2024-08-02 20:33:46
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,14 +12,14 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -35.3%%
-title = Can HOA come onto my property?
-url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
+match = -64.7%%
+title = How I gutted my HOA : r/pettyrevenge
+url = https://www.reddit.com/r/pettyrevenge/comments/10fgrkx/how_i_gutted_my_hoa/
 
 [www.quora.com]
-match = -200.0%%
-title = If I buy a house, can an HOA really tell me that my friend ...
-url = https://www.quora.com/If-I-buy-a-house-can-an-HOA-really-tell-me-that-my-friend-can-t-live-with-me-because-we-re-not-blood-related
+match = -194.1%%
+title = What are my options of being blatantly singled out in an ...
+url = https://www.quora.com/What-are-my-options-of-being-blatantly-singled-out-in-an-HOA-I-received-a-citation-for-a-sign-and-I-have-and-five-other-neighbors-next-to-me-with-same-signage-I-am-a-single-widowed-woman-and-tired-of-the-three-men
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -545,4 +545,9 @@ url = https://www.illinoistreasurer.gov/
 match = -170.6%%
 title = HOA Frequently Asked Questions | Division of Real Estate
 url = https://dre.colorado.gov/hoa-frequently-asked-questions
+
+[ncnewsline.com]
+match = -152.9%%
+title = Homeowner angst: North Carolina lawmakers urged to ...
+url = https://ncnewsline.com/2024/01/16/homeowner-angst/
 
