--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-02 19:59:25
+lastsearch = 2024-08-02 20:38:17
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -28,8 +28,8 @@ url = https://www.quora.com/What-are-some-examples-where-Vietnamese-was-written-
 
 [sieuthidemonline.vn]
 match = -61.9%%
-title = Đệm Foam Osakawa Everhome - SieuthidemOnline.vn
-url = https://sieuthidemonline.vn/dem-foam-osakawa-everhome/
+title = Đệm Foam cao cấp Everhome - SieuthidemOnline.vn
+url = https://sieuthidemonline.vn/dem-foam-cao-cap-everhome/
 
 [thegioidemviet.vn]
 match = -9.5%%
@@ -37,9 +37,9 @@ title = Bảng giá Đệm Bông Ép - Hà Nội
 url = https://thegioidemviet.vn/dem-bong-ep/
 
 [www.diepxuan.com]
-match = 23.8%%
-title = Nệm everhome TC 15F 16 20 - Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
+match = -61.9%%
+title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome.html
 
 [bachhoadem.vn]
 match = 28.6%%
