CI images update

--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-08-02 20:28:45
+lastsearch = 2024-08-02 20:49:15
 
 [shopee.vn]
-match = -25.9%%
-title = chăn lông cừu 4kids thái lan giá tốt Tháng 7, 2024
-url = https://shopee.vn/search?keyword=chăn lông cừu 4kids thái lan
+match = -11.1%%
+title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
+url = https://shopee.vn/-CHUYÊN-SỈ-🌺-chăn-băng-lông-tuyết-nhung-chăn-Tuyết-Sin-Thái-Lan-cho-mùa-đông-ấm-áp-loại-3kg-4kg-5kg-i.81313558.18665110405
 
 [www.lazada.vn]
 match = -11.1%%
@@ -147,9 +147,9 @@ title = CHĂN LÔNG GẤU TUYẾT BẮC CỰC XÁM (SINGLE) - Lasante
 url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
 
 [demxanh.com]
-match = -18.5%%
-title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html?srsltid=AfmBOopOp10StfRA5gE8uDBrypdlsOhaApjwtDwlLX37rKgIczzd4bNK
+match = 11.1%%
+title = Chăn tuyết Hàn Quốc Soft 2kg kẻ hồng
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-ke-hong.html?srsltid=AfmBOooA6stAhjG35ZXPpCmSz-7Bn0yEB3IrLEsj5CutmF45DgIJfLDu
 
 [vnvc.vn]
 match = -59.3%%
@@ -285,4 +285,14 @@ url = https://nld.com.vn/con-dia-chan-tren-chinh-truong-thai-lan-196240617221913
 match = -66.7%%
 title = Xạ thủ Trịnh Thu Vinh xuất sắc vào chung kết tranh huy ...
 url = https://hcmcpv.org.vn/tin-tuc/xa-thu-trinh-thu-vinh-xuat-sac-vao-chung-ket-tranh-huy-chuong-olympic-1491925489
+
+[www.bbc.com]
+match = -37.0%%
+title = Cựu Thủ tướng Thái Lan về nước sau 15 năm lưu vong
+url = https://www.bbc.com/vietnamese/world-66578074
+
+[truyenhinhthanhhoa.vn]
+match = -59.3%%
+title = Thanh Hóa chủ động phòng, chống bệnh dịch tả lợn châu ...
+url = https://truyenhinhthanhhoa.vn/thanh-hoa-chu-dong-phong-chong-benh-dich-ta-lon-chau-phi-180240802160530848.htm
 
