--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-08-02 18:25:23
+lastsearch = 2024-08-02 20:49:37
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -62,9 +62,9 @@ title = Chiếu Trúc Các Loại
 url = https://www.nemsaithanh.com/chieu-truc-cac-loai/
 
 [shopee.vn]
-match = 47.6%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = 42.9%%
+title = Chiếu trúc size 1,4m; 1,6m
+url = https://shopee.vn/Chiếu-trúc-size-1-4m-1-6m-1-8m-chiếu-trúc-giải-nhiệt-mùa-hè-i.15000357.4003983431
 
 [www.lazada.vn]
 match = -66.7%%
