--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-08-02 15:36:00
+lastsearch = 2024-08-02 20:52:31
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = -15.0%%
-title = Christina Mangurian, MD, MAS
-url = https://profiles.ucsf.edu/christina.mangurian
+match = 10.0%%
+title = Joan Hilton, DSc, MPH
+url = https://profiles.ucsf.edu/joan.hilton
 
 [cityofclovis.com]
 match = -65.0%%
@@ -27,9 +27,9 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q5.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -130.0%%
-title = Uncoupling Proteins: Role in Insulin Resistance and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3060851/
+match = -145.0%%
+title = PD-1/PD-L1 immune checkpoint inhibitors in neoadjuvant ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10019757/
 
 [www.energy.gov]
 match = -95.0%%
@@ -187,9 +187,9 @@ title = Flight Number - Airborne Sensor Facility - NASA
 url = https://asapdata.arc.nasa.gov/sensors/fsrs/94152_fsr.pdf
 
 [profiles.ucsd.edu]
-match = -41.7%%
-title = Jack Gilbert
-url = https://profiles.ucsd.edu/jack.gilbert
+match = -21.4%%
+title = Louise Laurent
+url = https://profiles.ucsd.edu/louise.laurent
 
 [profiles.ucdavis.edu]
 match = 0.0%%
@@ -317,9 +317,9 @@ title = The Voynich Manuscript: An Elegant Enigma
 url = https://www.nsa.gov/Portals/70/documents/about/cryptologic-heritage/historical-figures-publications/publications/misc/voynich_manuscript.pdf
 
 [nepis.epa.gov]
-match = -160.0%%
-title = Rates, Constants, and Kinetics Formulations in Surface Water ...
-url = https://nepis.epa.gov/Exe/ZyPURL.cgi?Dockey=9100R3IW.TXT
+match = -125.0%%
+title = Use of Wetlands for Water Pollution Control - epa nepis
+url = https://nepis.epa.gov/Exe/ZyPURL.cgi?Dockey=9100AASQ.TXT
 
 [www.ci.emeryville.ca.us]
 match = -15.0%%
@@ -405,4 +405,24 @@ url = https://store.samhsa.gov/sites/default/files/sma14-4849.pdf
 match = -125.0%%
 title = CURRICULUM VITAE Education and Training Awards and ...
 url = https://myomo.com/wp-content/uploads/2021/05/CV_Cramer_20210430-1.pdf
+
+[www.genomicscience.energy.gov]
+match = -95.0%%
+title = Research Publications | Genomic Science Program
+url = https://www.genomicscience.energy.gov/recent-publications/
+
+[amnplify.com.au]
+match = -20.0%%
+title = Interview with STEVEN WILSON
+url = https://amnplify.com.au/portfolio-items/interview-with-steven-wilson/
+
+[www.sheffield.ac.uk]
+match = -130.0%%
+title = Professor James Catto | Medicine and Population Health
+url = https://www.sheffield.ac.uk/smph/people/clinical-medicine/james-catto
+
+[www.cirm.ca.gov]
+match = -175.0%%
+title = A Brief History, Current Status Report And Options for Next steps
+url = https://www.cirm.ca.gov/wp-content/uploads/archive/files/about_cirm/Outside_Review_121710.pdf
 
