--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-08-02 06:31:20
+lastsearch = 2024-08-02 20:57:11
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -12,14 +12,14 @@ title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
 
 [shopee.vn]
-match = 32.1%%
-title = chiếu nhựa gấp gọn Thái Bình tiện dụng
-url = https://shopee.vn/chiếu-nhựa-gấp-gọn-Thái-Bình-tiện-dụng-i.114438421.3932155248
+match = -3.6%%
+title = Chiếu nhựa chố giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=Chiếu nhựa chố
 
 [tiki.vn]
-match = 3.6%%
-title = Chiếu nhựa gấp gọn hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu nhựa gấp gọn
+match = -21.4%%
+title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.yellowpages.vn]
 match = 0.0%%
