--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-02 12:23:28
+lastsearch = 2024-08-02 20:45:24
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = 14.3%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -76.2%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -77,9 +77,9 @@ title = Toàn ngành BHXH tập trung chi trả lương hưu theo mức ...
 url = https://dangcongsan.vn/bao-hiem-xa-hoi-bao-hiem-y-te-vi-an-sinh-xa-hoi/tin-tuc/toan-nganh-bhxh-tap-trung-chi-tra-luong-huu-theo-muc-huong-moi-ngay-tu-ngay-dau-671442.html
 
 [shopee.vn]
-match = -42.9%%
-title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
-url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
+match = -100.0%%
+title = chiếu tre thái lan loại 1 , hàng có sẵn m2xm9, m5x m9 ...
+url = https://shopee.vn/chiếu-tre-thái-lan-loại-1-hàng-có-sẵn-m2xm9-m5x-m9-m8x2m-2mx2m2-i.264060043.8153444972
 
 [baohungyen.vn]
 match = -4.8%%
@@ -143,7 +143,7 @@ url = https://www.sbv.gov.vn/webcenter/portal/vi/links/cm100?dDocName=SBV602247
 
 [www.traveloka.com]
 match = -119.0%%
-title = Khu du lịch Sơn Tiên – Điểm vui chơi hoành tráng nhất ...
+title = Khu du lịch Sơn Tiên - điểm vui chơi hoành tráng nhất ...
 url = https://www.traveloka.com/vi-vn/explore/destination/khu-du-lich-son-tien/177767
 
 [tapchinganhang.gov.vn]
