--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-02 20:25:37
+lastsearch = 2024-08-02 20:47:51
 
 [www.everonvn.vn]
 match = 20.0%%
@@ -22,9 +22,9 @@ title = Đệm Bông Ép Everon 1200x1900 Mua Cho Giường Đơn ...
 url = https://everonvn.com.vn/everon/1900/dem-bong-ep-everon-co-120x190
 
 [everonchinhhang.vn]
-match = -50.0%%
-title = Đệm - Nệm – Tổng Đại Lý Everon Chính Hãng
-url = https://everonchinhhang.vn/collections/dem-nem-everon-chinh-hang
+match = 5.0%%
+title = Đệm bông ép Sóng Everon
+url = https://everonchinhhang.vn/products/dem-bong-ep-song-everon
 
 [suongtuyet.com]
 match = 15.0%%
@@ -54,7 +54,7 @@ url = https://demqueensweet.com/
 [www.lazada.vn]
 match = -125.0%%
 title = Nệm( Đệm) bông ép Everon gấp 3 tiện lợi dễ di chuyển ...
-url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html
+url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html?srsltid=AfmBOoqDQ_W_r6DI_I1YCsd0CpRv39wiDg4SozgA57486-Sns89tPB0c
 
 [ru9.vn]
 match = -150.0%%
@@ -139,7 +139,7 @@ url = https://www.sieuthinem.vn/nem-everon.html
 [vuanem.com]
 match = -45.0%%
 title = Chăn Ga Gối Nệm Everon Chính Hãng Giá Rẻ
-url = https://vuanem.com/brand/everon
+url = https://vuanem.com/brand/everon?srsltid=AfmBOorEcuSLsGFwHdqMTL6BI5TQzMRdz2_bN180UCX3A9Solmoi0KV_
 
 [www.khodemthanhdo.com]
 match = -20.0%%
