--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-02 18:55:49
+lastsearch = 2024-08-02 20:58:52
 
 [www.lazada.vn]
 match = -61.1%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -16.7%%
-title = Nem Nuong Que Huong Air Fryer
-url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
+match = -188.9%%
+title = let me cater to you with these easy nem nuong spring rolls ...
+url = https://www.tiktok.com/@marylantran/video/7303621361979755822?lang=en
 
 [www.diepxuan.com]
 match = 11.1%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -111.1%%
-title = Người Việt Bolsa/Orange County | NEM CHUA CHẢ HUẾ
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/nem-chua-chả-huế-2520-cái-chả-huế-mini-65-50-cái-sử-dụng-thịt-heo-tươi-chất-lượn/2894022880748076/
+match = -133.3%%
+title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
 
 [emartmall.com.vn]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = CÁCH LÀM NEM HẢI SẢN NGON CHUẨN VỊ
 url = https://vuacua.vn/blogs/tips-va-cac-cong-thuc-nau-an/cach-lam-nem-hai-san-ngon-chuan-vi
 
 [cotienfoods.vn]
-match = -27.8%%
-title = Cách bảo quản nem chua tại nhà
-url = https://cotienfoods.vn/blogs/an-ngon/cach-bao-quan-nem-chua
+match = -72.2%%
+title = Khi nào nem chua chín? Cách nhận biết ...
+url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [icondenim.com]
 match = -133.3%%
