--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-08-02 14:18:02
+lastsearch = 2024-08-02 20:59:56
 
 [gobearcats.com]
 match = -142.1%%
@@ -312,9 +312,9 @@ title = GW170104: Observation of a 50-solar-mass binary black ...
 url = https://www.ligo.org/detections/GW170104/paper/GW170104-Supplement.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = -84.2%%
-title = Vancomycin Resistance in Enterococcus and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9866002/
+match = -173.7%%
+title = Evaluation of the Extent of Variant Histology in Urothelial ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8988952/
 
 [www.ucdavis.edu]
 match = -52.6%%
@@ -337,9 +337,9 @@ title =
 url = https://www.prepscholar.com/sat/s/colleges/UC-Davis-admission-requirements
 
 [evstamps.hibid.com]
-match = -115.8%%
-title = Colombian Republic Stamps 1889-1940 neatly mounted
-url = https://evstamps.hibid.com/lot/187490458
+match = -152.6%%
+title = Lot # : 30 - Confederate States Stamps Cover #7 Single use
+url = https://evstamps.hibid.com/lot/187490381
 
 [ltg.gov.vi]
 match = -168.4%%
