--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-02 20:30:50
+lastsearch = 2024-08-02 21:17:01
 
 [hanvico.com.vn]
 match = 28.6%%
-title = Bộ ga chun LIVING - LV52
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv52/
+title = Bộ ga chun LIVING - LV62
+url = https://hanvico.com.vn/san-pham/lv62/
 
 [www.diepxuan.com]
 match = -4.8%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối TTN 14 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
-match = -28.6%%
-title = Bộ chăn ga gối cotton 100%% mã màu BC22-063
-url = https://changagoidemsonghong.com/chan-ga-goi-bc63
+match = -71.4%%
+title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
+url = https://changagoidemsonghong.com/chan-ga-goi-bc57
 
 [songhong.info]
 match = -19.0%%
@@ -92,9 +92,9 @@ title = Bộ Chăn Ga Gối Lụa Silk Thêu LSP-14
 url = https://suongtuyet.com/bo-chan-ga-goi-lua-silk-theu-lsp-14
 
 [khodem.vn]
-match = -90.5%%
-title = Bộ chăn ga gối chun chần Tencel Maris Kim Cương - Kho đệm
-url = https://khodem.vn/bo-chan-ga-goi-chun-chan-tencel-maris-kim-cuong/
+match = -33.3%%
+title = Bộ chăn ga gối kẻ trắng khách sạn - Kho đệm
+url = https://khodem.vn/bo-chan-ga-goi-ke-trang-khach-san/
 
 [mym.com.vn]
 match = 42.9%%
