--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-02 14:47:13
+lastsearch = 2024-08-02 21:19:25
 
 [www.galottery.com]
 match = -7.7%%
@@ -174,7 +174,7 @@ url = https://www.rn.ca.gov/applicants/lic-end.shtml
 [www.partstown.com]
 match = -215.4%%
 title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
-url = https://www.partstown.com/henny-penny/henec05-001
+url = https://www.partstown.com/henny-penny/henec05-001?srsltid=AfmBOor7saXwf-QFcPpK5ecenXhTOVSX_IbTBAg2R4HyBE1DiT6XBw_K
 
 [www.imdb.com]
 match = 0.0%%
@@ -212,9 +212,9 @@ title =
 url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-features-benefits-of-each/
 
 [books.google.com]
-match = -161.5%%
-title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxZF64CZ&sig=ACfU3U33JqK7qECMl1hTBQMLtaG6Xanm3Q&hl=en&sa=X&ved=2ahUKEwj2jrbB5NWHAxWWEEQIHUIPO6QQ6AF6BAgpEAM
+match = -330.8%%
+title = Anthropological Papers of the American Museum of Natural History
+url = https://books.google.com/books?id=2XdBAQAAMAAJ&pg=PA147&lpg=PA147&dq=ga+ni+long+14&source=bl&ots=Hd6xdzgtBJ&sig=ACfU3U3Re7DbX-CJ9pC4Iy99AhuWC5LMHQ&hl=en&sa=X&ved=2ahUKEwiQt-ydwNaHAxWsH0QIHZtXHbwQ6AF6BAgXEAM
 
 [ottawabraves.com]
 match = -292.3%%
