--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-02 20:38:17
+lastsearch = 2024-08-02 21:13:52
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -17,8 +17,8 @@ title = Đệm bông ép chính hãng giảm 50 ...
 url = https://demxanh.com/dem-bong-ep.html
 
 [www.ebay.com]
-match = -95.2%%
-title = Everhome 700 TC 100%% Egyptian Cotton Extra Deep ...
+match = -128.6%%
+title = Everhome 700 TC 100%% Egyptian Cotton Extra Deep Fitted ...
 url = https://www.ebay.com/itm/256190021356
 
 [www.quora.com]
@@ -27,9 +27,9 @@ title = Vietnamese mixed script
 url = https://www.quora.com/What-are-some-examples-where-Vietnamese-was-written-in-mixed-Han-Latin-script
 
 [sieuthidemonline.vn]
-match = -61.9%%
-title = Đệm Foam cao cấp Everhome - SieuthidemOnline.vn
-url = https://sieuthidemonline.vn/dem-foam-cao-cap-everhome/
+match = -85.7%%
+title = Đệm cao su thiên nhiên cao cấp Lavender Everhome
+url = https://sieuthidemonline.vn/dem-cao-su-lavender/
 
 [thegioidemviet.vn]
 match = -9.5%%
@@ -37,9 +37,9 @@ title = Bảng giá Đệm Bông Ép - Hà Nội
 url = https://thegioidemviet.vn/dem-bong-ep/
 
 [www.diepxuan.com]
-match = -61.9%%
-title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome.html
+match = 23.8%%
+title = Nệm everhome TC 15F 16 20 - Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
 
 [bachhoadem.vn]
 match = 28.6%%
