--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-08-02 16:39:46
+lastsearch = 2024-08-02 21:24:14
 
 [www.lazada.vn]
-match = -111.1%%
-title = Nem Cua Bể Đặc Sản Hải Phòng khay 12 cái Thơm ngon
-url = https://www.lazada.vn/products/nem-cua-be-dac-san-hai-phong-khay-12-cai-thom-ngon-i1960185476.html
+match = -105.6%%
+title = Nem chua rán nhân phô mai - 1 hộp 12 viên 300gam
+url = https://www.lazada.vn/products/nem-chua-ran-nhan-pho-mai-1-hop-12-vien-300gam-i2107266244.html
 
 [www.coastpneumatics.com]
 match = -116.7%%
@@ -17,14 +17,14 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -177.8%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -133.3%%
+title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -155.6%%
+title = TOP 12 thương hiệu nệm cao su khuyến mãi, giá rẻ tại ...
+url = https://thegioinem.com/top-12-thuong-hieu-nem-cao-su-khuyen-mai-gia-re-tai-thegioinem-com.html
 
 [www.facebook.com]
 match = -155.6%%
@@ -57,9 +57,9 @@ title = Thùy Ngân (@huuloc861) • Instagram photos and videos
 url = https://www.instagram.com/huuloc861/
 
 [www.diepxuan.com]
-match = -111.1%%
-title = Điệp Xuân Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
+match = 11.1%%
+title = Điệp Xuân Nệm siêu nhẹ
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [nemphuoclong.vn]
 match = -83.3%%
