CI images update

--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-08-02 16:46:58
+lastsearch = 2024-08-02 22:29:40
 
 [www.youtube.com]
 match = -52.0%%
@@ -12,9 +12,9 @@ title = DUYÊN TÌNH CHƯA NGUÔI TẬP 16 | Phim Bộ Tình Cảm ...
 url = https://www.youtube.com/watch?v=zf9v0CNNDyQ
 
 [www.voatiengviet.com]
-match = -92.0%%
-title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đường ...
-url = https://www.voatiengviet.com/a/7026996.html
+match = -68.0%%
+title = Đài Loan bắt giữ 8 người Việt Nam là lao động bỏ trốn
+url = https://www.voatiengviet.com/a/dai-loan-bat-giu-8-nguoi-viet-nam-la-lao-dong-bo-tron/7677699.html
 
 [daithuy.com]
 match = -92.0%%
@@ -309,7 +309,7 @@ url = https://vietcetera.com/vn/cong-thuc-viral-nao-dang-sau-trac-nghiem-tinh-ca
 [www.diepxuan.com]
 match = 28.0%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOoqpEIlr7kETs1CM3dPniH6QpAtBNDVvGtMVwMxKxHXW7gRGLhXL
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [vanchuyenhangdailoan.com]
 match = 4.0%%
