--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-02 22:00:24
+lastsearch = 2024-08-02 22:23:02
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Mô hình nuôi gà vi sinh: Thịt thơm ngon, gà sạch bệnh | VTC1
 url = https://www.youtube.com/watch?v=U8FJ7FRihYQ
 
 [books.google.com]
-match = -231.2%%
-title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
-url = https://books.google.com/books?id=rq3aAAAAMAAJ&pg=RA6-PA66&lpg=RA6-PA66&dq=chieu+lac+soc+16&source=bl&ots=W7J7xV57WP&sig=ACfU3U2W_lP9CyyYZDMZj0TpTYFheYEInQ&hl=en&sa=X&ved=2ahUKEwiclr_-jtaHAxXHM9AFHWq0DJgQ6AF6BAgoEAM
+match = -212.5%%
+title = Đại doàn kết - Issues 9-29 - Page 20 - Google Books Result
+url = https://books.google.com/books?id=_yPpAAAAMAAJ&pg=RA4-PA20&lpg=RA4-PA20&dq=chieu+lac+soc+16&source=bl&ots=fHS3PVPmr8&sig=ACfU3U3Se5MoQOk9Xo33dIdds7HMS6Kr7A&hl=en&sa=X&ved=2ahUKEwiD3Pe5ztaHAxX4SjABHWnTFhUQ6AF6BAgiEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
