--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-02 21:54:05
+lastsearch = 2024-08-02 22:16:46
 
 [changagoidemsonghong.com]
-match = 4.2%%
-title = Chăn ga gối classic cotton mã C16-C38
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
+match = -12.5%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [www.diepxuan.com]
 match = -58.3%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối đệm Cotton poly đáng yêu Mẫu 16 - Nắng Sto
 url = https://nangstore.vn/bo-chan-ga-goi-de-m-cotton-poly-da-ng-yeu-ma-u-16
 
 [chanrathanhthuy.com]
-match = 25.0%%
-title = 10 bộ chăn ga gối đệm tencel đẹp nhất
-url = https://chanrathanhthuy.com/tin-tuc/10-bo-chan-ga-goi-dem-tencel-dep-nhat-714.html
+match = 50.0%%
+title = Chăn ga gối đệm giá rẻ
+url = https://chanrathanhthuy.com/tin-tuc/chan-ga-goi-dem-gia-re-1209.html
 
 [myhunggia.com]
 match = -4.2%%
