--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-08-02 20:32:43
+lastsearch = 2024-08-02 22:23:23
 
 [silverwow.net]
 match = -255.6%%
@@ -97,9 +97,9 @@ title = Cheong Chan Elephant Cooking Caramel Sauce 3kg ...
 url = https://www.supplybunny.com/en/products/cheong-chan-elephant-cooking-caramel-sauce-3kg-bottle-6-bottles-per-carton
 
 [shopee.com.my]
-match = -622.2%%
-title = 3kg 祥珍象标晒油 Cheong Chan Cooking Caramel Dark ...
-url = https://shopee.com.my/3kg-祥珍象标晒油-Cheong-Chan-Cooking-Caramel-Dark-Soy-Sauce-i.121533526.10766512503
+match = -177.8%%
+title = Cheong Chan Cooking Caramel : 3kg
+url = https://shopee.com.my/Cheong-Chan-Cooking-Caramel-3kg-i.451025624.5793405457
 
 [www.ttbsupplies.com]
 match = -422.2%%
@@ -164,7 +164,7 @@ url = https://www.printables.com/model/341062-3kg-polymaker-spool-roller-mount
 [jutongon.com]
 match = -588.9%%
 title = Cheong Chan Thick Caramel Sauce 大甲象標生晒油- 3kg
-url = https://jutongon.com/products/cheong-chan-thick-caramel-sauce-大甲象標生晒油-3kg?srsltid=AfmBOopKjAHTXqQJDOhfX0WdH7yO7bVdMfhDKjVJScs0QdvR4Ws_O9Bj
+url = https://jutongon.com/products/cheong-chan-thick-caramel-sauce-大甲象標生晒油-3kg
 
 [www.homedepot.com]
 match = -77.8%%
