--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-08-02 15:29:14
+lastsearch = 2024-08-02 22:25:53
 
 [www.diepxuan.com]
 match = -20.0%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOop3HS40qPE4C8_uUCX157vZFtdm7nM_tBSH0lrX8zoBzXcHi2G-
 
 [www.htlight.vn]
 match = -26.7%%
@@ -17,9 +17,9 @@ title = Đèn chiếu cỏ CD-15W - HTLIGHT
 url = https://www.htlight.vn/den-chieu-co-cd-15w-1.html
 
 [shopee.vn]
-match = -106.7%%
-title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
-url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
+match = -6.7%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [daros.com.vn]
 match = -40.0%%
@@ -29,7 +29,7 @@ url = https://daros.com.vn/ht-15.html
 [htguitarcenter.vn]
 match = -26.7%%
 title = Guitar Trần Acoustic THD-15
-url = https://htguitarcenter.vn/san-pham/guitar-acoustic-thd-15/
+url = http://htguitarcenter.vn/san-pham/guitar-acoustic-thd-15/
 
 [www.htlightlevel.vn]
 match = -200.0%%
@@ -42,9 +42,9 @@ title = Cột thép tròn côn TC- 78 cần đôi HT15
 url = https://helaco.group/cot-thep-tron-con-tc-78-can-doi-ht15
 
 [www.facebook.com]
-match = -186.7%%
-title = Cộng đồng cư dân Bát Tràng | Chiếu tăm cây H&T khẳng ...
-url = https://www.facebook.com/groups/664918127312487/posts/chiếu-tăm-cây-ht-khẳng-định-thương-hiệu-trên-thị-trường-freeshiplh-0963-658-905-/1872701319867489/
+match = -180.0%%
+title = Trung tâm thiết bị chiếu sáng - HT Lighting | Da Nang
+url = https://www.facebook.com/trungtamthietbichieusanghtlighting/
 
 [www.htv.com.vn]
 match = -106.7%%
@@ -52,9 +52,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.youtube.com]
-match = -246.7%%
-title = Tình Đất - Thanh Tùng ( St: Tuấn Phương ) Đất bạc màu và ...
-url = https://www.youtube.com/watch?v=rzjYGTOnEHg
+match = -213.3%%
+title = Nhiễm Trùng ‘Cậu Nhỏ' Sau Khi Đi Xỏ Khuyên Để Tăng Hấp ...
+url = https://www.youtube.com/watch?v=pwAZLchVoZ8
 
 [htlight.vn]
 match = -26.7%%
