--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-02 20:50:17
+lastsearch = 2024-08-02 22:30:24
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -213.3%%
-title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132
+match = -200.0%%
+title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
+url = https://www.facebook.com/photo.php?fbid=1194465754317379&id=139181649845800&set=a.179106562519975&locale=id_ID
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -304,7 +304,7 @@ url = https://thepxuanlien.com/san-pham/luoi-thep-han
 [www.booking.com]
 match = -146.7%%
 title = CHILLIapartamenty - Polanki Aqua D212 - BAŁTYCKI
-url = https://www.booking.com/hotel/pl/chilliapartamenty-polanki-aqua-d212-baltycki.vi.html&
+url = https://www.booking.com/hotel/pl/chilliapartamenty-polanki-aqua-d212-baltycki.vi.html
 
 [hcmyu.hpu2.edu.vn]
 match = -253.3%%
