--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-08-02 21:19:49
+lastsearch = 2024-08-02 22:19:13
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -13,7 +13,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
 
 [shopee.vn]
 match = -3.6%%
-title = Chiếu nhựa chố giá tốt Tháng 8, 2024 | Mua ngay
+title = Chiếu nhựa chố giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=Chiếu nhựa chố
 
 [tiki.vn]
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = 17.9%%
-title = Chiếu nhựa nguyên sinh gấp gọn 1m8 x 3m
-url = https://www.sendo.vn/chieu-nhua-nguyen-sinh-gap-gon-1m8-x-3m-hang-viet-nam-chat-luong-cao-116062190.html
+match = -3.6%%
+title = Chiếu nhựa Việt Nam 1m8 -2m GIÁ RẺ NHẤT - CN182M
+url = https://www.sendo.vn/chieu-nhua-vie-t-nam-1m8-2m-gia-re-nha-t-48369789.html
 
 [mia.vn]
 match = -39.3%%
