--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-08-02 18:22:19
+lastsearch = 2024-08-02 22:18:51
 
 [thegioidemviet.vn]
-match = 21.4%%
-title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
-url = https://thegioidemviet.vn/chieu-truc/
+match = 35.7%%
+title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
+url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
 match = 25.0%%
@@ -22,14 +22,14 @@ title = Chiếu Trúc Quế Lâm | Hai Phong
 url = https://www.facebook.com/ChieuTrucQueLam/
 
 [shopee.vn]
-match = 10.7%%
-title = Chiếu trúc Hạt Quế lâm- chuẩn việt nam 1m5 đến 2m
-url = https://shopee.vn/Chiếu-trúc-Hạt-Quế-lâm-chuẩn-việt-nam-1m5-đến-2m-i.251185875.3635886770
+match = 42.9%%
+title = Chiếu trúc Quế Lâm - hàng chuẩn loại 1
+url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-hàng-chuẩn-loại-1-i.20551076.970075626
 
 [demxanh.com]
 match = -25.0%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOorN1DJPIWp01PGbXsYA0_nms53HSPRFaJrb4lWE2JR4zRWy8Gcj
+url = https://demxanh.com/chieu-truc.html
 
 [tiki.vn]
 match = -39.3%%
