--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-02 18:49:35
+lastsearch = 2024-08-02 22:15:44
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -107.7%%
-title = Gani Lawal Jr. (@ganilawalspeaks)
-url = https://www.instagram.com/ganilawalspeaks/?hl=en
+match = -15.4%%
+title = Ayu Gani 🐘 (@ganegani)
+url = https://www.instagram.com/ganegani/?hl=en
 
 [www.nebf.com]
 match = -50.0%%
