--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-02 20:42:50
+lastsearch = 2024-08-02 22:22:22
 
 [www.bible.com]
-match = -100.0%%
-title = MATHAIA 22 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/MAT.22.MIZCLBSI
+match = -88.2%%
+title = LUKA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
@@ -32,9 +32,9 @@ title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
 url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
 
 [www.churchofjesuschrist.org]
-match = -17.6%%
-title = Doktrin na ol Kavanen 78
-url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
+match = -205.9%%
+title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
+url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
