--- a/images/nem-diamold-re-200x220x09/config.ini
+++ b/images/nem-diamold-re-200x220x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-diamold-re-200x220x09.html
 lastopen = 2024-06-10 11:11:36
 
 [search]
-lastsearch = 2024-08-02 17:43:11
+lastsearch = 2024-08-02 22:19:34
 
 [www.youtube.com]
 match = -88.0%%
@@ -88,8 +88,8 @@ url = https://thebackshed.org/forum/ViewTopic_mobile.php?TID=8542&P=7
 
 [www.reddit.com]
 match = -12.0%%
-title = Tested Diamond but I bought Moissanite
-url = https://www.reddit.com/r/Moissanite/comments/1de2d9y/tested_diamond_but_i_bought_moissanite/
+title = Diamond tester recommendations???
+url = https://www.reddit.com/r/Diamonds/comments/17zlsxe/diamond_tester_recommendations/
 
 [www.tapeheads.net]
 match = -12.0%%
