--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-08-02 18:10:31
+lastsearch = 2024-08-02 22:17:08
 
 [www.everonvn.vn]
-match = -22.6%%
-title = Bảng giá đệm bông ép Everon 1m8 (1.8m hay 180 x 200)
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m8.html
+match = -38.7%%
+title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 
 [nemgiakho.com]
 match = 54.8%%
@@ -67,9 +67,9 @@ title = Chăn Ga Gối Everon EPM22063
 url = https://thegioinem.com/chan-ga-goi-everon-epm22063.html
 
 [tongdailyeveron.com.vn]
-match = 0.0%%
-title = ĐỆM NEW EXTRA FOAM
-url = https://tongdailyeveron.com.vn/products/dem-new-extra-foam
+match = -3.2%%
+title = Đệm đa năng EVERON (nệm trải sàn, tấm trải đệm)
+url = https://tongdailyeveron.com.vn/products/dem-da-nang-everon-nem-trai-san-tam-trai-dem
 
 [shopee.vn]
 match = 6.5%%
