CI images update

--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -37,9 +37,9 @@ title = Mền Tuyết NIN - Liac Snow
 url = https://ninhouse.vn/products/men-tuyet-nin-liac-snow
 
 [www.youtube.com]
-match = -33.3%%
-title = THÁI LAN🇹🇭NHỮNG ĐIỀU KỲ THÚ P1 - LY KỲ CHUYỆN MA ...
-url = https://www.youtube.com/watch?v=vLlxHY2NEhE
+match = -74.1%%
+title = Cựu Thủ tướng Thái Lan Thaksin được trả tự do - Tin thế giới ...
+url = https://www.youtube.com/watch?v=zGtjB2l6au4
 
 [baodaknong.vn]
 match = -7.4%%
