--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-08-02 20:25:16
+lastsearch = 2024-08-02 22:40:22
 
 [xoptraisan.info]
-match = 26.3%%
-title = Thảm nỉ ghép Tường Lâm 60×60
+match = -57.9%%
+title = xoptraisan Resources and Information.
 url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
 
 [thamaulac.com.vn]
