--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-02 15:35:18
+lastsearch = 2024-08-02 22:33:04
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
@@ -152,9 +152,9 @@ title = Bongdatructuyen 24 7 táºp 1 trang 118
 url = https://boardofwatersupply.com/appGgWZQDXVkf
 
 [steamcommunity.com]
-match = -53.3%%
-title = Cộng đồng Steam :: Dawn of Man
-url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=196
+match = -193.3%%
+title = new updates in future? :: Dawn of Man Thảo luận chung
+url = https://steamcommunity.com/app/858810/discussions/0/1744515852434385475/?l=vietnamese&ctp=5
 
 [register.fca.org.uk]
 match = -6.7%%
