--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-08-02 21:40:58
+lastsearch = 2024-08-02 22:43:09
 
 [changagoidemtamhao.com]
 match = -5.0%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
 url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
 
 [demxanh.com]
-match = -80.0%%
-title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 18
-url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html
+match = -40.0%%
+title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc
+url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac.html?srsltid=AfmBOorC4SBjpsj2Hgj6SqdfAFBkCz-94e3JBj1Ytn0w2D5A_4nh4ILJ
 
 [www.facebook.com]
 match = -75.0%%
