--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-08-02 21:18:43
+lastsearch = 2024-08-02 22:39:22
 
 [tuananh.vn]
-match = 22.2%%
-title = Đệm Korea Gấm Plus
-url = https://tuananh.vn/dem-korea-gam-plus-p223.html
+match = -72.7%%
+title = Đệm bông ép
+url = https://tuananh.vn/dem-bong-ep-c51.html
 
 [demxanh.com]
 match = -28.0%%
@@ -49,7 +49,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 [www.youtube.com]
 match = -16.7%%
 title = Đệm Tuấn Anh
-url = https://www.youtube.com/channel/UC1lyuex0oy3RBLBffNrjtMw/videos
+url = https://www.youtube.com/@emtuananh5547/videos
 
 [sieuthinem.com]
 match = 32.0%%
