--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-08-02 21:25:54
+lastsearch = 2024-08-02 22:44:31
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -143.8%%
-title = Gloss for life #beautytok #hudabeauty #lip ...
-url = https://www.tiktok.com/@hudabeauty/video/7343640145192684842
+match = -212.5%%
+title = trying out the new nars powermatte lipsticks ☺️. these are ...
+url = https://www.tiktok.com/@theoliviasaurusrex/video/7153242423961980165?lang=en
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -215,4 +215,9 @@ url = https://archive.org/stream/cihm_98430/cihm_98430_djvu.txt
 match = -106.2%%
 title = Avatar Studios Logo : r/TheLastAirbender
 url = https://www.reddit.com/r/TheLastAirbender/comments/lrqa8p/avatar_studios_logo/
+
+[fkik433.com]
+match = -125.0%%
+title = tui warmdream 16 - Tui Magic Life Rixos Beldibi +16
+url = https://fkik433.com/blog/vljjrwrj-233/
 
