--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-02 12:46:06
+lastsearch = 2024-08-02 22:51:30
 
 [en.wikipedia.org]
 match = -15.4%%
@@ -27,9 +27,9 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = TRPC channels: Structure, function, regulation and recent ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7183440/
+match = -194.1%%
+title = Non-alcoholic fatty liver disease and colorectal cancer ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6613648/
 
 [books.google.com]
 match = -11.8%%
