--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-08-02 20:47:29
+lastsearch = 2024-08-02 22:55:57
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc mắt nhỏ có viền màu đen 180x200cm (1m8)
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-180x200cm-32.html
 
 [chieutrelinhchi.com]
-match = 3.6%%
-title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1m6x1m9
-url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-khong-vien-mau-vang-1m6x1m9-91.html
+match = 0.0%%
+title = Chiếu trúc hạt nhỏ không viền màu nâu đen Size: 1m8x2m
+url = https://chieutrelinhchi.com/chieu-truc-1m8/chieu-truc-hat-nho-khong-vien-mau-nau-1m8x2m-101.html
 
 [dem24h.vn]
 match = 46.4%%
@@ -29,7 +29,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 [demxanh.com]
 match = 28.6%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOoo6tKKsWx3Iys-WzTe_9v46sAcQ_XgU38nWm8iTuLRybBxSWBpO
 
 [shopee.vn]
 match = -10.7%%
@@ -72,9 +72,9 @@ title = CHIẾU TRÚC 1M8 HẠT VÀNG KHÔNG VIỀN TPHCM
 url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-1m8-hat-vang-khong-vien-tphcm-80.html
 
 [www.youtube.com]
-match = -28.6%%
-title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp CHIẾU SIÊU ...
-url = https://www.youtube.com/watch?v=FFV6Oqxq3Ds
+match = 7.1%%
+title = Top 3 Chiếu Trúc mùa hè hot nhất tại Đệm Xanh
+url = https://www.youtube.com/watch?v=HfaucbE1OKk
 
 [vongxepsaigon.vn]
 match = 3.6%%
@@ -92,9 +92,9 @@ title = Tìm hiểu về quy trình để tạo nên sản phẩm chiếu trúc 
 url = https://chieutrucxinh.weebly.com/chia-se/category/mua-chi7871u-truacutec
 
 [h5.lazada.vn]
-match = -21.4%%
-title = chiếu tre 1,4*1,9m hạt vàng không viền hàng Việt Nam ...
-url = https://h5.lazada.vn/products/chieu-truc-chieu-tre-1419m-hat-vang-khong-vien-hang-viet-nam-sieu-re-i277132020.html
+match = 42.9%%
+title = Chiếu trúc 1,6*2m hạt nâu không viền
+url = https://h5.lazada.vn/products/chieu-truc-162m-hat-nau-khong-vien-i473062569.html
 
 [chieutrucchieutre.ete.vn]
 match = 32.1%%
