--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -12,9 +12,9 @@ title = Ga ni lông 2m x 2m2 - Điệp Xuân
 url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 
 [shopee.vn]
-match = -84.2%%
-title = Ga chống thấm bọc nệm kích thước 2m*2m2 - Shopee
-url = https://shopee.vn/Ga-chống-thấm-bọc-nệm-kích-thước-2m*2m2-i.2157828.1211390382
+match = -42.1%%
+title = GA CHỐNG THẤM 2M X 2M2 ( LOẠI 1 DÀY DẶN )
+url = https://shopee.vn/GA-CHỐNG-THẤM-2M-X-2M2-(-LOẠI-1-DÀY-DẶN-)-i.13475819.120666839
 
 [www.lazada.vn]
 match = -136.8%%
