--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-02 16:42:15
+lastsearch = 2024-08-02 22:51:07
 
 [www.diepxuan.com]
-match = 45.5%%
-title = Thảm giường II 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
+match = 50.0%%
+title = Điệp Xuân Thảm giường nỉ 180x200
+url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường cao su non màu xanh ngọc
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html
+match = -4.5%%
+title = Thảm trải giường cao su non màu hồng
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
 
 [www.lazada.vn]
 match = -68.2%%
