--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-08-02 11:47:34
+lastsearch = 2024-08-02 22:45:56
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -395,4 +395,9 @@ url = https://www.sciencedirect.com/science/article/pii/S0740624X17304239
 match = -6.2%%
 title = Evidence for IPS
 url = https://ipsworks.org/index.php/evidence-for-ips/
+
+[cps-vo.org]
+match = -152.6%%
+title = Registrants | Cyber-Physical Systems Virtual Organization
+url = https://cps-vo.org/group/satc-pimtg22/registrants
 
