--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-02 21:15:58
+lastsearch = 2024-08-02 22:50:46
 
 [www.lazada.vn]
 match = -193.3%%
@@ -32,9 +32,9 @@ title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
 url = https://ninhouse.vn/collections/vo-goi-nam
 
 [lepetit.com.vn]
-match = -173.3%%
-title = Vỏ gối vuông sofa họa tiết hình học 45x45 cm - Le Petit
-url = https://lepetit.com.vn/vo-goi-vuong-sofa-hoa-tiet-bac-au-45x45-cm
+match = -6.7%%
+title = Vỏ gối vuông Ấn Độ - Le Petit
+url = https://lepetit.com.vn/vo-goi-vuong-an-do
 
 [flexhouse.vn]
 match = -160.0%%
