CI images update

--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-08-02 22:24:04
+lastsearch = 2024-08-02 23:23:00
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -19,7 +19,7 @@ url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 [demxanh.com]
 match = 35.5%%
 title = Ga chống thấm đa năng Olympia 2 trong 1
-url = https://demxanh.com/ga-chong-tham-da-nang-olympia-2-trong-1.html?srsltid=AfmBOopiYwjHB9Yd40owbR3hOZaw54aKsyhCF6y06foPY_bNoVpuGjVC
+url = https://demxanh.com/ga-chong-tham-da-nang-olympia-2-trong-1.html
 
 [dreamland.vn]
 match = -21.1%%
