--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-02 22:30:35
+lastsearch = 2024-08-02 23:18:11
 
 [shopee.vn]
 match = -8.0%%
@@ -24,7 +24,7 @@ url = https://hoanglongcms.com/donhang/xuat-khau-lao-dong-dai-loan-tuyen-gap-15-
 [www.facebook.com]
 match = 12.0%%
 title = Xin chào, tôi ở Đài Loan | Kaohsiung
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+url = https://www.facebook.com/toiodailoan/
 
 [vi.wikipedia.org]
 match = -4.0%%
