--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-08-02 18:37:12
+lastsearch = 2024-08-02 23:19:15
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -82,9 +82,9 @@ title = Khăn rối mặt gấu kèm lục lạc, gặm nướu (Xanh dương)
 url = https://concung.com/do-choi-em-be/khan-roi-mat-gau-kem-luc-lac-gam-nuou-xanh-duong-55669.html
 
 [shopee.vn]
-match = -18.8%%
-title = Chiếu lác thiên nhiên : 1m6 .1m8
-url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
+match = -75.0%%
+title = chiếu lác xuất khẩu 1m8 chiếu dầy cao cấp
+url = https://shopee.vn/chiếu-lác-xuất-khẩu-1m8-chiếu-dầy-cao-cấp-i.275355238.7156323941
 
 [www.conggiao.org]
 match = -68.8%%
@@ -217,9 +217,9 @@ title = Khách sạn rẻ gần Redebas, Đức - Nhiều ưu đãi hấp dẫn
 url = https://www.booking.com/city/de/redebas.vi.html
 
 [m.facebook.com]
-match = -106.2%%
-title = TIỆM SHIP #TOÀA KTX KHU B, RÀO KHU A ...
-url = https://m.facebook.com/groups/hoiktxkhub/posts/2405407426506389/
+match = -43.8%%
+title = Kaito Kid added a new photo.
+url = https://m.facebook.com/100069699575680/photos/794545102878802/
 
 [antoanthanhpho.vn]
 match = -68.8%%
@@ -372,9 +372,9 @@ title = 20+ ý tưởng bố trí bàn học, bàn làm việc cho không gian n
 url = https://happynest.vn/album/100076133/20-y-tuong-bo-tri-ban-hoc-ban-lam-viec-cho-khong-gian-nho
 
 [vnexpress.net]
-match = -187.5%%
-title = Chủ mưu buôn lậu 6 tấn vàng: 'Không hiểu biết pháp luật'
-url = https://vnexpress.net/chu-muu-buon-lau-6-tan-vang-khong-hieu-biet-phap-luat-4770821.html
+match = -143.8%%
+title = Ấn phẩm Tết Giáp Thìn dự thi giải Sách Quốc gia
+url = https://vnexpress.net/an-pham-tet-giap-thin-du-thi-giai-sach-quoc-gia-4776663.html
 
 [moitruong.net.vn]
 match = -162.5%%
@@ -430,4 +430,9 @@ url = https://www.vaticannews.va/vi/loi-chua-hang-ngay/2024/08/16.html
 match = -218.8%%
 title = Cát Tiên: Quyết liệt triển khai các biện pháp phòng, chống ...
 url = https://baolamdong.vn/xa-hoi/202408/cat-tien-quyet-liet-trien-khai-cac-bien-phap-phong-chong-benh-sot-xuat-huyet-e201d52/
+
+[baothuathienhue.vn]
+match = -37.5%%
+title = Chẳng lẽ không đáng để xót xa
+url = https://baothuathienhue.vn/van-hoa-nghe-thuat/chang-le-khong-dang-de-xot-xa-143614.html
 
