--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-02 22:22:41
+lastsearch = 2024-08-02 23:26:26
 
 [www.diepxuan.com]
-match = 0.0%%
-title = Chiếu nhựa Thái Bình 90x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html
+match = -25.0%%
+title = Chiếu du lịch Việt Thái 200x220 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-du-lich-viet-thai-200x220.html
 
 [www.qcyc.ca]
 match = -53.6%%
