--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-02 18:50:37
+lastsearch = 2024-08-02 23:26:47
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgnQMpld&sig=ACfU3U0k8lEQgE8F5SuN1QFCIpKa04J7Kg&hl=en&sa=X&ved=2ahUKEwiY3-P8ntaHAxVmmIkEHTxsF7UQ6AF6BAgZEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgoIJlic&sig=ACfU3U12eBtIosxtFSaceR35WIa2RGYKXw&hl=en&sa=X&ved=2ahUKEwjk5srZ3NaHAxVmvokEHe9vIYcQ6AF6BAgjEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
