--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-02 22:26:57
+lastsearch = 2024-08-02 23:31:43
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -13,12 +13,12 @@ url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome
 
 [demxanh.com]
 match = -19.0%%
-title = Đệm bông ép Everhome 1m8 giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-everhome-1m8-gia-bao-nhieu.html
+title = Đệm bông ép chính hãng giảm 50 ...
+url = https://demxanh.com/dem-bong-ep.html?srsltid=AfmBOoqA2XZ9ynYzr1yRKbZFpirUsHF1lEnKhCEevUKhIz2FC4qmbpAf
 
 [www.ebay.com]
-match = -128.6%%
-title = Everhome 700 TC 100%% Egyptian Cotton Extra Deep Fitted ...
+match = -95.2%%
+title = Everhome 700 TC 100%% Egyptian Cotton Extra Deep ...
 url = https://www.ebay.com/itm/256190021356
 
 [www.quora.com]
@@ -39,7 +39,7 @@ url = https://thegioidemviet.vn/dem-bong-ep/
 [www.diepxuan.com]
 match = 23.8%%
 title = Nệm everhome TC 15F 16 20 - Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
+url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html?srsltid=AfmBOopsb75h9yyZkXJtE_yddrv-K6TPJHDKr5VeB216Qrr-YkTgTbTK
 
 [bachhoadem.vn]
 match = 28.6%%
@@ -54,7 +54,7 @@ url = https://demsingapore.com/dem-bong-ep-everhome-vo-tc.html
 [demviethome.vn]
 match = -52.4%%
 title = Tổng kho đệm bông ép chính hãng tại Hà Nội
-url = https://demviethome.vn/dem-bong-ep/
+url = https://demviethome.vn/dem-bong-ep/?srsltid=AfmBOorQnf89C0NT8tWNl6JU0YYKh6Oq-5YmjPILY2zrj5ypxBLI5qfx
 
 [www.tiktok.com]
 match = -95.2%%
