--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-08-02 16:31:58
+lastsearch = 2024-08-02 23:24:43
 
 [www.tui.co.uk]
-match = -40.0%%
-title = Flight and Travel Options
-url = https://www.tui.co.uk/destinations/info/travel-options
+match = -180.0%%
+title = Caribbean Cruises 2024 / 2025 | Marella Cruises
+url = https://www.tui.co.uk/cruise/caribbean-cruises/
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Marella Cruises in Asia, sailing from Singapore
 url = https://www.southamptoncruisecentre.com/latest-news/marella-cruises-to-asia-with-dreamliner-to-singapore/
 
 [www.tuigroup.com]
-match = -233.3%%
-title = World's leading tourism business TUI Group set to grow in ...
-url = https://www.tuigroup.com/en-en/media/press-releases/2015/20151125-worlds-leading-tourism-business-tui-group-set-to-grow-in-south-east-asia
+match = -26.7%%
+title = Reports & Presentations
+url = https://www.tuigroup.com/en-en/investors/reports-and-presentations
 
 [www.seascanner.com]
 match = -140.0%%
@@ -87,8 +87,8 @@ title = Asia Cruise with Mein Schiff 6 on 12/02/2025
 url = https://www.seascanner.com/cruise-k235506-asia-mein-schiff-6-singapore
 
 [www.cruisemapper.com]
-match = -220.0%%
-title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026 | ...
+match = -180.0%%
+title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026
 url = https://www.cruisemapper.com/cruise-lines/TUI-Cruises-32
 
 [www.mybaggage.com]
@@ -255,4 +255,14 @@ url = https://www.shropshirestar.com/news/business/2023/12/14/first-tui-passenge
 match = -33.3%%
 title = Swissport International AG
 url = https://www.swissport.com/en
+
+[www.datacenterdynamics.com]
+match = -40.0%%
+title = The transformation fallacy
+url = https://www.datacenterdynamics.com/en/analysis/the-transformation-fallacy-tui-cio/
+
+[markets.businessinsider.com]
+match = -240.0%%
+title = EQS-PVR: TUI AG: Release according to Article 40, Section 1 ...
+url = https://markets.businessinsider.com/news/stocks/eqs-pvr-tui-ag-release-according-to-article-40-section-1-of-the-wphg-the-german-securities-trading-act-with-the-objective-of-europe-wide-distribution-1033632211
 
