CI images update

--- a/images/chieu-cay-ht-120x190/config.ini
+++ b/images/chieu-cay-ht-120x190/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-ht-120x190.html
 lastopen = 2024-08-01 18:48:15
 
 [search]
-lastsearch = 2024-08-02 21:59:42
+lastsearch = 2024-08-02 23:49:25
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Trúc Tăm HT Loại Bền , Đẹp
-url = https://shopee.vn/Chiếu-Trúc-Tăm-HT-Loại-Bền-Đẹp-i.117037771.1936980907
+match = -85.0%%
+title = Chiếu Tăm H&T Hương Trúc - Kích thước 120x190 ; 150x190
+url = https://shopee.vn/Chiếu-Tăm-H-T-Hương-Trúc-Kích-thước-120x190-150x190-160x200-180x200-200x220-i.752854860.22042172270
 
 [www.diepxuan.com]
-match = -14.3%%
-title = HT - Điệp Xuân
-url = https://www.diepxuan.com/ht.html
+match = -20.0%%
+title = Chiếu nhựa Thái Bình 120x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html
 
 [chuyenhangviet.com]
 match = -90.0%%
@@ -27,9 +27,9 @@ title = Chiếu Hương Trúc cao cấp dòng hạt
 url = https://demhong.vn/chieu-huong-truc/
 
 [demxanh.com]
-match = -65.0%%
-title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
+match = -20.0%%
+title = Chiếu trúc thanh viền lụa loại cây
+url = https://demxanh.com/chieu-truc-moc-lua-cay.html
 
 [m.facebook.com]
 match = 25.0%%
@@ -42,9 +42,9 @@ title = Chiếu trúc tăm H&T 120x190
 url = https://chieutruc.org/chieu-truc-tam-ht-120x190
 
 [thegioidemonline.com]
-match = -10.0%%
-title = Chiếu trúc hạt Hương Trúc hạt vàng
-url = https://thegioidemonline.com/chieu-truc-hat-huong-truc-hat-vang.html
+match = -5.0%%
+title = Chiếu trúc thanh Hương Trúc 100 x 190cm
+url = https://thegioidemonline.com/chieu-truc-thanh-huong-truc-100-190.html
 
 [www.facebook.com]
 match = -75.0%%
