--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-08-02 14:15:19
+lastsearch = 2024-08-02 23:43:54
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -19,7 +19,7 @@ url = https://dungcuykhoakimminh.com/tag/ion&trang-19
 [mych.vn]
 match = -60.7%%
 title = Khay Đá 14 Ô Làm Đá Viên, Rau Câu, Trữ Đồ Ăn Dặm ... - Mych
-url = https://mych.vn/san-pham/khay-da-14-o-lam-da-vien-rau-cau-tru-do-an-dam-cho-be-co-nap-day.html
+url = https://mych.vn/san-pham/khay-da-14-o-lam-da-vien-rau-cau-tru-do-an-dam-cho-be-co-nap-day.html?srsltid=AfmBOoq_3o-kSvOpUo-IoyYsbDoKqJB1n0Y3kpdLp-eV4asIvLldM8Mu
 
 [xn--chiabngvngloiworldcupkhuvcchu-8nc3a50cm302fybaw6p.nigioivietnam.vn]
 match = -60.7%%
@@ -112,9 +112,9 @@ title = HÀNH TRÌNH “PEEL DA” 14 NGÀY BẰNG MANDELIC ...
 url = https://www.facebook.com/trustpluscuanam/photos/a.113295247201464/113295160534806/?type=3
 
 [trongdoitam1.mysapo.net]
-match = 14.3%%
-title = Bia đá 14 - Đá mỹ nghệ Ninh Bình
-url = https://trongdoitam1.mysapo.net/bia-da-14
+match = 7.1%%
+title = Cuốn thư đá 14 - Đá mỹ nghệ Ninh Bình
+url = https://trongdoitam1.mysapo.net/cuon-thu-da-14
 
 [www.dkn.tv]
 match = -21.4%%
