--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-02 14:53:43
+lastsearch = 2024-08-02 23:46:20
 
 [hoa18.com]
-match = -84.2%%
-title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
-url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
+match = -50.0%%
+title = Về Hoa18
+url = https://hoa18.com/thong-tin/ve-hoa-18
 
 [www.youtube.com]
 match = -126.3%%
@@ -27,9 +27,9 @@ title = Lắp đặt tấm pin năng lượng mặt trời
 url = https://www.facebook.com/denledeurosuper/photos/-hướng-dẫn-cách-lắp-đèn-pha-led-năng-lượng-mặt-trời-đúng-chuẩn-️-đèn-pha-led-năn/720282063461086/
 
 [vietnambiz.vn]
-match = -163.2%%
-title = So sánh giá vàng 1/8: Vàng miếng SJC vọt lên gần 80 triệu ...
-url = https://vietnambiz.vn/so-sanh-gia-vang-18-vang-mieng-sjc-vot-len-gan-80-trieu-dongluong-2024811245533.htm
+match = -126.3%%
+title = Giá gas hôm nay (2/8) đảo chiều giảm, rời mốc 2 USD ...
+url = https://vietnambiz.vn/gia-gas-hom-nay-28-dao-chieu-giam-roi-moc-2-usdmmbtu-2024829583225.htm
 
 [thoibaotaichinhvietnam.vn]
 match = -147.4%%
@@ -67,8 +67,8 @@ title = Điều Hoà Bật 16 Độ Không Mát Ở Nhật Hitachi
 url = https://www.tiktok.com/discover/điều-hoà-bật-16-độ-không-mát-ở-nhật-hitachi
 
 [xlinhho.hagiang.gov.vn]
-match = -110.5%%
-title = Những doanh nghiệp đưa cây chè Bắc Quang vượt qua ...
+match = -157.9%%
+title = Những doanh nghiệp đưa cây chè Bắc Quang vượt qua đại dịch ...
 url = https://xlinhho.hagiang.gov.vn/-/nhung-doanh-nghiep-dua-cay-che-bac-quang-vuot-qua-dai-dich-covid-19
 
 [metruyencv.com]
