--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-02 21:43:22
+lastsearch = 2024-08-02 23:49:46
 
 [www.everonvn.vn]
 match = 66.7%%
@@ -12,14 +12,14 @@ title = Ruột gối Everon 45 x 65
 url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-45-x-65.html
 
 [shopee.vn]
-match = -81.0%%
-title = Ruột gối osin bông cứng 45x65. Dành cho người thích ...
-url = https://shopee.vn/Ruột-gối-osin-bông-cứng-45x65.-Dành-cho-người-thích-nằm-gối-cứng-”3-i.435075614.3489785530
+match = -100.0%%
+title = Ruột gối đầu bông gòn cao cấp kháng khuẩn_mẫu hoa nhí ...
+url = https://shopee.vn/Ruột-gối-đầu-bông-gòn-cao-cấp-kháng-khuẩn_mẫu-hoa-nhí-hoa-trà_không-xẹp-không-vón-cục-kích-thước-45x65-i.549343397.11460957236
 
 [www.diepxuan.com]
 match = 4.8%%
 title = Ruột gối kê Warmdream 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-warmdream-45x65.html?srsltid=AfmBOor-daNjieZQ8teiqmdpVjnrtGUEpJoh9DMhxyg8MJTfLHfo9zfo
+url = https://www.diepxuan.com/ruot-goi-ke-warmdream-45x65.html
 
 [elambo.vn]
 match = -90.5%%
@@ -34,7 +34,7 @@ url = https://suongtuyet.com/ruot-goi-standard-everon-45-x-65-cm
 [www.lazada.vn]
 match = -85.7%%
 title = Ruột gối đầu hoa nhí ruột gối nằm cao cấp kích thước 45x65
-url = https://www.lazada.vn/products/ruot-goi-dau-hoa-nhi-ruot-goi-nam-cao-cap-kich-thuoc-45x65-i1443371481.html?srsltid=AfmBOoolV1YzjQ0dhrNG3f9AxJWYS6kRZ45SCgLTWKZ35np0vlcGHf_o
+url = https://www.lazada.vn/products/ruot-goi-dau-hoa-nhi-ruot-goi-nam-cao-cap-kich-thuoc-45x65-i1443371481.html
 
 [demxanh.com]
 match = -81.0%%
