--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-08-02 20:21:29
+lastsearch = 2024-08-02 23:48:23
 
 [thamaulac.com.vn]
 match = -88.9%%
@@ -12,9 +12,9 @@ title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
 url = https://thamaulac.com.vn/
 
 [xoptraisan.info]
-match = -172.2%%
-title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp ...
-url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
+match = -138.9%%
+title = Thảm xốp Tường Lâm - thương hiệu hàng Việt Nam chất ...
+url = https://xoptraisan.info/tham-xop-tuong-lam-cao-cap
 
 [thamvinhthuan.com]
 match = 16.7%%
@@ -22,9 +22,9 @@ title = Thảm xốp một màu 60cm x 60 cm
 url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
 
 [trieuchau.com]
-match = -61.1%%
-title = Thảm Trải Sàn TPHCM - THẢM XỐP MÀU 60X60X1.2CM
-url = http://trieuchau.com/en-us/1057/27906/Tham-xop-60x60cm/THAM-XOP-MAU-60X60X12CM
+match = -5.6%%
+title = Thảm Xốp Trải Sàn Một Màu 60x60 cm
+url = https://trieuchau.com/vi-vn/1057/27906/Tham-Xop-60x60cm/Tham-Xop-Trai-San-Mot-Mau-60x60-cm
 
 [shopee.vn]
 match = -111.1%%
