CI images update

--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-02 19:56:58
+lastsearch = 2024-08-02 23:52:28
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = 23.5%%
-title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH02
-url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh02
+match = 20.6%%
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia H16
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-h16
 
 [shopee.vn]
 match = 50.0%%
