--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-08-02 21:42:18
+lastsearch = 2024-08-02 23:49:41
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -17,9 +17,9 @@ title = Ruột gối đơn siêu nhẹ Sông Hồng Collection chính hãng!
 url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 
 [demxanh.com]
-match = -44.0%%
-title = Top 9 loại gối cho người nằm ngửa tốt nhất 2024
-url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html?srsltid=AfmBOoqAPiB29KPRJsQKKy6CrpwxOyijgyrexSTgMwiNAa1p_pzbStS-
+match = 5.3%%
+title = Mua ruột gối ở đâu?
+url = https://demxanh.com/mua-ruot-goi-o-dau.html?srsltid=AfmBOooXDVntyUbiPv4jt3lrbujlhvphORMBC83cspuQan0wZDECjTV0
 
 [khodem.vn]
 match = 8.0%%
@@ -130,4 +130,9 @@ url = https://archive.org/stream/CUAmigaIssue041Jul93/CU_Amiga_Issue_041_Jul_93_
 match = 70.0%%
 title = Ruột gối Everon mỏng
 url = https://everonhanoi.com.vn/ruot-goi-mong-everon-10
+
+[everonvn.com.vn]
+match = -48.0%%
+title = 【Ruột Gối đầu Loại mỏng Everon Chính Hãng Hàn Quốc ...
+url = https://everonvn.com.vn/everon/75/ruot-goi-mong?srsltid=AfmBOoqH2K7kcZKccarvuiM6hVDwKHsbq8hmquYvwlKra51QTc9BYqrf
 
