--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-08-02 17:15:00
+lastsearch = 2024-08-02 23:50:23
 
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 18
-url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
+url = https://erado.vn/giuong-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
 
 [shopee.vn]
 match = -105.0%%
@@ -24,12 +24,12 @@ url = https://h5.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038
 [bilystore.vn]
 match = -100.0%%
 title = Thảm phòng ngủ NA18 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na18/?srsltid=AfmBOopGhqPyHYGAWv5qv5dgm-kDR6QE-DCa_GtNtNvZtMEz6T7IxMIq
+url = https://bilystore.vn/tham-phong-ngu-na18/
 
 [www.lazada.vn]
 match = -5.0%%
 title = BỘ 18 NÚT NHỰA GIƯỜNG XẾP NHÔM US
-url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html?srsltid=AfmBOoq2TL-pxTZBzlfJEZWv0jEGRUcozWEk8uuafFmkmuaaNgT_IV-6
+url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html
 
 [fhomehatinh.com]
 match = -140.0%%
@@ -104,7 +104,7 @@ url = https://dogothanhha.vn/san-pham/bo-giuong-ngu-co-dien-cd-18--1467&p=3
 [smlife.vn]
 match = -95.0%%
 title = Giường Ngủ Bọc Nệm Cao Cấp Eadric - 18 | SMLIFE.vn
-url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18?srsltid=AfmBOorfnJKwPC2-e-4DmsL6W7Bp44RJqNRNtzzEpRZUsW36ljhItpg6
+url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18
 
 [giuongbenhbaominh.vn]
 match = -95.0%%
@@ -132,9 +132,9 @@ title = Tổng Hợp Các Mẫu Giường Quân Đội Bền Đẹp Nhất Hiệ
 url = https://noithattamviet.net/cam-nang/tong-hop-cac-mau-giuong-quan-doi-ben-dep-nhat-hien-nay
 
 [noithatcaco.vn]
-match = -135.0%%
-title = 65 Mẫu giường ngủ trẻ em bé trai bé gái - Thiết kế siêu xinh
-url = https://noithatcaco.vn/collections/giuong-ngu-tre-em
+match = -115.0%%
+title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
+url = https://noithatcaco.vn/collections/giuong-ngu
 
 [sofahome.vn]
 match = 25.0%%
