--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-08-02 22:20:15
+lastsearch = 2024-08-02 23:59:02
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -12,9 +12,9 @@ title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
 url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [shopee.vn]
-match = 7.4%%
-title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
+match = 37.0%%
+title = chăn tuyết thái lan sịn cao cấp
+url = https://shopee.vn/chăn-tuyết-thái-lan-sịn-cao-cấp-i.1126803410.22661927902
 
 [www.lazada.vn]
 match = 3.7%%
@@ -154,7 +154,7 @@ url = https://dantri.com.vn/du-lich/khach-tay-thang-than-noi-ly-do-tai-sao-me-vi
 [www.facebook.com]
 match = -37.0%%
 title = Chăn 3kg 4 kg 5kg Thành... - Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/story.php/?story_fbid=436093618729320&id=100069860554625
+url = https://www.facebook.com/permalink.php/?story_fbid=436093618729320&id=100069860554625
 
 [stockbiz.vn]
 match = 18.5%%
