--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-02 21:30:46
+lastsearch = 2024-08-02 23:46:15
 
 [www.reddit.com]
 match = -82.6%%
@@ -47,9 +47,9 @@ title = Global Newsletter #71: No More Fairytales - Extinction Rebellion
 url = https://rebellion.global/pt/blog/2022/12/16/global-newsletter-71/
 
 [www.cia.gov]
-match = -82.6%%
-title = N. KOREAN PATROL BOATS SEIZE U.S. SPY SHIP WITH ...
-url = https://www.cia.gov/readingroom/document/06638269
+match = -65.2%%
+title = THE KOREAN LABOR PARTY AND THE KIM IL-SONG ...
+url = https://www.cia.gov/readingroom/document/cia-rdp80t00246a064800250001-5
 
 [www.instagram.com]
 match = 0.0%%
@@ -263,8 +263,8 @@ url = https://www.archives.gov/files/declassification/iscap/pdf/2011-064-doc49.p
 
 [cryptonews.com]
 match = -108.7%%
-title = South Korean Police Arrest 70 in 'Crypto-powered Drugs ...
-url = https://cryptonews.com/news/south-korean-police-arrest-70-in-raid-on-crypto-powered-drug-dealers.htm
+title = South Korean Lawmakers Consider 'Abolishing' Crypto Tax ...
+url = https://cryptonews.com/news/south-korean-lawmakers-consider-abolishing-crypto-tax-law.htm
 
 [www.koreanwar2.org]
 match = -30.4%%
@@ -570,4 +570,9 @@ url = https://www.gsam.com/content/dam/gsam/xls/us/en/etf/Goldman Sachs Innovate
 match = -8.7%%
 title = Treaty Series Recueil des Traites
 url = https://treaties.un.org/doc/Publication/UNTS/Volume 1049/v1049.pdf
+
+[sg.finance.yahoo.com]
+match = -78.3%%
+title = NEM KRW (XEM-KRW) latest stock news and headlines
+url = https://sg.finance.yahoo.com/quote/XEM-KRW/news/
 
