--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-02 20:31:11
+lastsearch = 2024-08-02 23:55:56
 
 [en.wikipedia.org]
 match = -12.5%%
@@ -42,9 +42,9 @@ title = Cryptocurrency Rankings
 url = https://cryptoslate.com/coins/
 
 [30rates.com]
-match = -120.0%%
-title = USD to MXN forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
+match = -135.0%%
+title = Gold Price Prediction For Tomorrow, This Week And Month.
+url = https://30rates.com/gold-price-forecast-and-predictions
 
 [www.akc.org]
 match = -45.0%%
@@ -277,9 +277,9 @@ title = North Korea says Hwasong-18 ICBM test was response to ...
 url = https://www.reuters.com/world/asia-pacific/north-korea-says-it-conducted-hwasong-18-icbm-monday-yonhap-2023-12-18/
 
 [vietnamnews.vn]
-match = -145.0%%
-title = Vietnam News | Politics, Business, Economy, Society, Life ...
-url = https://vietnamnews.vn/
+match = -90.0%%
+title = VBA 2024: Saigon Heat take first win in Hà Nội
+url = https://vietnamnews.vn/sports/1660490/vba-2024-saigon-heat-take-first-win-in-ha-noi.html
 
 [www.britishnewspaperarchive.co.uk]
 match = -125.0%%
