--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-08-02 23:17:51
+lastsearch = 2024-08-02 23:56:17
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -24,12 +24,12 @@ url = https://cityofclovis.com/wp-content/uploads/2018/09/Expedited-Permit-Proce
 [studentaid.gov]
 match = -30.8%%
 title = App by School
-url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q5.xls
+url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q2.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -145.0%%
-title = PD-1/PD-L1 immune checkpoint inhibitors in neoadjuvant ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10019757/
+match = -150.0%%
+title = Consensus Guidelines on the Use of Intravenous Ketamine ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6023575/
 
 [www.energy.gov]
 match = -95.0%%
