--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-08-02 20:59:56
+lastsearch = 2024-08-02 23:56:38
 
 [gobearcats.com]
 match = -142.1%%
@@ -59,7 +59,7 @@ url = https://download.asic.gov.au/media/1314541/ASIC40A_08.pdf
 [www2.ed.gov]
 match = -126.3%%
 title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
+url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
 
 [www.lumiere-education.com]
 match = 0.0%%
@@ -312,9 +312,9 @@ title = GW170104: Observation of a 50-solar-mass binary black ...
 url = https://www.ligo.org/detections/GW170104/paper/GW170104-Supplement.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = -173.7%%
-title = Evaluation of the Extent of Variant Histology in Urothelial ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8988952/
+match = -84.2%%
+title = Vancomycin Resistance in Enterococcus and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9866002/
 
 [www.ucdavis.edu]
 match = -52.6%%
@@ -580,4 +580,9 @@ url = https://sites.medschool.ucsd.edu/research/inm/news-publications/Pages/Publ
 match = -6.2%%
 title = Evidence for IPS
 url = https://ipsworks.org/index.php/evidence-for-ips/
+
+[happiness-report.s3.amazonaws.com]
+match = -26.3%%
+title = World Happiness Report (WHR) 2024
+url = https://happiness-report.s3.amazonaws.com/2024/WHR+24.pdf
 
